--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -26,10 +26,10 @@
 	<meta name="msapplication-TileImage" content="favicon/mstile-144x144.png" />
 
 	<!-- Bootstrap core CSS -->
-	<link href="/dist/css/bootstrap.min.css" rel="stylesheet">
+	<link href="/working-build/dist/css/bootstrap.min.css" rel="stylesheet">
 
 	<!-- Custom styles for this page -->
-	<link href="/styles/about_us.css" rel="stylesheet">
+	<link href="/working-build/styles/about_us.css" rel="stylesheet">
 </head>
 
 <body>
@@ -38,12 +38,12 @@
   <div class="container">
     <ul class="nav orange-bar">
       <li class="header-column visible-xs pull-left">&nbsp;</li>
-      <li class="header-column pull-left"> <a id="pathway-logo" class="navbar-brand img-responsive hidden-xs" href="/"></a> <a id="pathway-mobile-logo" class="center-block navbar-brand visible-xs" href="index.htm"></a></li>
-      <li class="header-column pull-right"> <a class="header_contact hidden-xs pull-left" href="pages/advising-and-support.html">Contact Us <img src="/img/speechbubble.png" width="13" height="11" alt="speech"></a>
+      <li class="header-column pull-left"> <a id="pathway-logo" class="navbar-brand img-responsive hidden-xs" href="/working-build/"></a> <a id="pathway-mobile-logo" class="center-block navbar-brand visible-xs" href="index.htm"></a></li>
+      <li class="header-column pull-right"> <a class="header_contact hidden-xs pull-left" href="/working-build/pages/advising-and-support.html">Contact Us <img src="/working-build/img/speechbubble.png" width="13" height="11" alt="speech"></a>
        <form class="navbar-right pull-right ng-pristine ng-valid">
         <!-- Sign-in / User button -->
         <div class="btn-group">
-          <a class="btn signin-btn" style="text-decoration: none;text-transform: none;" href="/Home/ReturnHome"><span class="hidden-xs">Patty Pathway</span><img class="visible-xs" src="/img/usernameman.png" style="padding:0 10px; height:20px;"></a>
+          <a class="btn signin-btn" style="text-decoration: none;text-transform: none;" href="/working-build/"><span class="hidden-xs">Patty Pathway</span><img class="visible-xs" src="/working-build/img/usernameman.png" style="padding:0 10px; height:20px;"></a>
           <button type="button" class="btn signin-btn dropdown-toggle" data-toggle="dropdown">
             <span class="caret"></span>
             <span class="sr-only">Dropdown</span>
@@ -71,11 +71,11 @@
     </div>
     <nav id="siteNavigation" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
-        <li class="nav-1 "><a href="/pages/testimonials/testimonials.html">Testimonials</a></li>
-        <li class="nav-2 "><a href="/pages/what_is_pathway/what_is_pathway.html">What Is Pathway</a></li>
+        <li class="nav-1 "><a href="/working-build/pages/testimonials/testimonials.html">Testimonials</a></li>
+        <li class="nav-2 "><a href="/working-build/pages/what_is_pathway/what_is_pathway.html">What Is Pathway</a></li>
         <li class="nav-3 "><a href="#join">Join Pathway</a></li>
-        <li class="nav-4 "><a href="/pages/speaking_partners/what-is-speaking-partners.html">Speaking Partners</a></li>
-        <li class="nav-5 "><a href="/pages/local_leaders/using-pathway.html">Local Leaders</a></li>
+        <li class="nav-4 "><a href="/working-build/pages/speaking_partners/what-is-speaking-partners.html">Speaking Partners</a></li>
+        <li class="nav-5 "><a href="/working-build/pages/local_leaders/using-pathway.html">Local Leaders</a></li>
       </ul>
     </nav>
   </div>
@@ -88,7 +88,7 @@
     <div class="container">
         <div id="breadCrumb" class="breadCrumb module">
             <ul>
-                <li class="first"><a href="../index.htm">Home</a></li>
+                <li class="first"><a href="/working-build/">Home</a></li>
                 <li  class="last" >about us</li>
                 
                 <li class="last"></li> 
@@ -127,7 +127,7 @@
               educational opportunities to extend beyond the city limits of Rexburg
               and into the far reaches of the Earth. </p>
           </div>
-          <div class="col-xs-12 col-sm-4"> <img src="../img/about-us/pathwayclassroom.png" alt="students in a pathway class"><br><br></div>
+          <div class="col-xs-12 col-sm-4"> <img src="/working-build/img/about-us/pathwayclassroom.png" alt="students in a pathway class"><br><br></div>
           <p> In 1971, Henry B. Eyring, then president of Ricks College, declared
               the following in his inaugural address: </p>
         </div>
@@ -144,7 +144,7 @@
               <span class="credit-red2">Inaugural Response, December 1971</span></p>
           </div>
         </div>
-        <div class="col-xs-12 col-sm-4"> <img style="float:left" src="../img/about-us/eyring.png" alt="President Henry B. Eyring"> </div>
+        <div class="col-xs-12 col-sm-4"> <img style="float:left" src="/working-build/img/about-us/eyring.png" alt="President Henry B. Eyring"> </div>
       </div>
         <div class="content-block underline">
           <p>Nearly 30 years later, in his own inaugural address, David A. Bednar stated:</p>
@@ -165,7 +165,7 @@
                 <span class="credit-red2">Inaugural Response, February 1998</span></p>
             </div>
           </div>
-          <div class="col-xs-12 col-sm-4 "> <img src="../img/about-us/bednar.png" alt="President David A. Bednar"> </div>
+          <div class="col-xs-12 col-sm-4 "> <img src="/working-build/img/about-us/bednar.png" alt="President David A. Bednar"> </div>
         </div>
       
         <div class="content-block underline">
@@ -186,7 +186,7 @@
                 <span class="credit-red2">Inaugural Response, October 2005</span></p>
             </div>
           </div>
-          <div class="col-xs-12 col-sm-4"> <img src="../img/about-us/clark.png" alt="President Kim B. Clark"> </div>
+          <div class="col-xs-12 col-sm-4"> <img src="/working-build/img/about-us/clark.png" alt="President Kim B. Clark"> </div>
         </div>
         <div class="content-block">
           <div class="col-xs-12 col-sm-8">
@@ -220,7 +220,7 @@
               Pathway and started the BYU-Idaho Online Degree Program.</p> <br>
               <br>
             </div>
-              <div class="col-xs-12 col-sm-6"><img class="img-responsive" src="../img/about-us/pathwaysitechart.png" alt="pathway site chart"></div><div class="col-xs-12 col-sm-6"><img class="img-responsive" src="../img/about-us/pathwaystudentchart.png" alt="pathway student chart"></div>
+              <div class="col-xs-12 col-sm-6"><img class="img-responsive" src="/working-build/img/about-us/pathwaysitechart.png" alt="pathway site chart"></div><div class="col-xs-12 col-sm-6"><img class="img-responsive" src="/working-build/img/about-us/pathwaystudentchart.png" alt="pathway student chart"></div>
                <div class="col-xs-12 col-sm-8">
               <br>
               <p>Pathway will continue to open doors of education and hope
@@ -243,15 +243,15 @@
     <div class="footer-links navbar">
       <ul class="nav navbar-nav">
         <li class="social-container"> 
-          <a class="social-icon" href="https://www.facebook.com/BYUIdahoPathway"><img src="/img/social-icons/facebook.png" width="27" height="27"></a> 
-          <a class="social-icon" href="http://www.pinterest.com/byuipop/pathway-online-programs/"><img src="/img/social-icons/pinterest.png" width="27" height="27"></a>
+          <a class="social-icon" href="https://www.facebook.com/BYUIdahoPathway"><img src="/working-build/img/social-icons/facebook.png" width="27" height="27"></a> 
+          <a class="social-icon" href="http://www.pinterest.com/byuipop/pathway-online-programs/"><img src="/working-build/img/social-icons/pinterest.png" width="27" height="27"></a>
           <br class="hidden-xs"> 
-          <a class="social-icon" href="https://twitter.com/BYUIdahoPathway"><img src="/img/social-icons/twitter.png" width="27" height="27"></a> 
-          <a class="social-icon" href="http://instagram.com/Pathway_BYUIdaho"><img src="/img/social-icons/instagram.png" width="27" height="27"></a>
+          <a class="social-icon" href="https://twitter.com/BYUIdahoPathway"><img src="/working-build/img/social-icons/twitter.png" width="27" height="27"></a> 
+          <a class="social-icon" href="http://instagram.com/Pathway_BYUIdaho"><img src="/working-build/img/social-icons/instagram.png" width="27" height="27"></a>
         </li>
         <li class="footer-link hidden-xs"> <a href="http://www.byui.edu/pathway/news-index">Newsroom</a> </li>
-        <li class="footer-link hidden-xs"> <a href="/pages/about-us.html">About Us</a> </li>
-        <li class="footer-link hidden-xs"> <a href="/pages/pathway-faq.html"><img class="faq-bubble" src="/img/faqbubble_small.png" width="16" height="16">FAQ</a> </li>
+        <li class="footer-link hidden-xs"> <a href="/working-build/pages/about-us.html">About Us</a> </li>
+        <li class="footer-link hidden-xs"> <a href="/working-build/pages/pathway-faq.html"><img class="faq-bubble" src="/working-build/img/faqbubble_small.png" width="16" height="16">FAQ</a> </li>
         <li class="footer-link hidden-xs"> <a href="http://www.byui.edu/pathway/videos">Media</a>  </li>
         <li class="footer-link hidden-xs"> <a target="_blank" href="http://www.ldsphilanthropies.org/byu-idaho/funds/byuidaho-pathway.html">Donate</a> </li>
         <li class="footer-link hidden-xs"> <a target="_blank" href="https://byui.az1.qualtrics.com/SE/?SID=SV_3mwtzS9u0NgVnQV">Visit a Location</a> </li>
@@ -262,10 +262,10 @@
 
 <!-- Jquery and Bootstrap JS -->
 <script src="//code.jquery.com/jquery-1.10.2.min.js"></script> 
-<script src="/dist/js/bootstrap.min.js"></script>
+<script src="/working-build/dist/js/bootstrap.min.js"></script>
 
 
-<script src="/js/drawer.js"></script> 
+<script src="/working-build/js/drawer.js"></script> 
 
 
 
