--- a/pages/what_is_pathway/what_is_pathway.html
+++ b/pages/what_is_pathway/what_is_pathway.html
@@ -26,10 +26,10 @@
 	<meta name="msapplication-TileImage" content="favicon/mstile-144x144.png" />
 
 	<!-- Bootstrap core CSS -->
-	<link href="/dist/css/bootstrap.min.css" rel="stylesheet">
+	<link href="/working-build/dist/css/bootstrap.min.css" rel="stylesheet">
 
 	<!-- Custom styles for this page -->
-	<link href="/styles/what_is_pathway.css" rel="stylesheet">
+	<link href="/working-build/styles/what_is_pathway.css" rel="stylesheet">
 </head>
 
 <body>
@@ -38,12 +38,12 @@
   <div class="container">
     <ul class="nav orange-bar">
       <li class="header-column visible-xs pull-left">&nbsp;</li>
-      <li class="header-column pull-left"> <a id="pathway-logo" class="navbar-brand img-responsive hidden-xs" href="/"></a> <a id="pathway-mobile-logo" class="center-block navbar-brand visible-xs" href="index.htm"></a></li>
-      <li class="header-column pull-right"> <a class="header_contact hidden-xs pull-left" href="pages/advising-and-support.html">Contact Us <img src="/img/speechbubble.png" width="13" height="11" alt="speech"></a>
+      <li class="header-column pull-left"> <a id="pathway-logo" class="navbar-brand img-responsive hidden-xs" href="/working-build/"></a> <a id="pathway-mobile-logo" class="center-block navbar-brand visible-xs" href="index.htm"></a></li>
+      <li class="header-column pull-right"> <a class="header_contact hidden-xs pull-left" href="/working-build/pages/advising-and-support.html">Contact Us <img src="/working-build/img/speechbubble.png" width="13" height="11" alt="speech"></a>
        <form class="navbar-right pull-right ng-pristine ng-valid">
         <!-- Sign-in / User button -->
         <div class="btn-group">
-          <a class="btn signin-btn" style="text-decoration: none;text-transform: none;" href="/Home/ReturnHome"><span class="hidden-xs">Patty Pathway</span><img class="visible-xs" src="/img/usernameman.png" style="padding:0 10px; height:20px;"></a>
+          <a class="btn signin-btn" style="text-decoration: none;text-transform: none;" href="/working-build/"><span class="hidden-xs">Patty Pathway</span><img class="visible-xs" src="/working-build/img/usernameman.png" style="padding:0 10px; height:20px;"></a>
           <button type="button" class="btn signin-btn dropdown-toggle" data-toggle="dropdown">
             <span class="caret"></span>
             <span class="sr-only">Dropdown</span>
@@ -71,11 +71,11 @@
     </div>
     <nav id="siteNavigation" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
-        <li class="nav-1 "><a href="/pages/testimonials/testimonials.html">Testimonials</a></li>
-        <li class="nav-2 nav_active"><a href="/pages/what_is_pathway/what_is_pathway.html">What Is Pathway</a></li>
+        <li class="nav-1 "><a href="/working-build/pages/testimonials/testimonials.html">Testimonials</a></li>
+        <li class="nav-2 nav_active"><a href="/working-build/pages/what_is_pathway/what_is_pathway.html">What Is Pathway</a></li>
         <li class="nav-3 "><a href="#join">Join Pathway</a></li>
-        <li class="nav-4 "><a href="/pages/speaking_partners/what-is-speaking-partners.html">Speaking Partners</a></li>
-        <li class="nav-5 "><a href="/pages/local_leaders/using-pathway.html">Local Leaders</a></li>
+        <li class="nav-4 "><a href="/working-build/pages/speaking_partners/what-is-speaking-partners.html">Speaking Partners</a></li>
+        <li class="nav-5 "><a href="/working-build/pages/local_leaders/using-pathway.html">Local Leaders</a></li>
       </ul>
     </nav>
   </div>
@@ -88,7 +88,7 @@
     <div class="container">
         <div id="breadCrumb" class="breadCrumb module">
             <ul>
-                <li class="first"><a href="../index.htm">Home</a></li>
+                <li class="first"><a href="/working-build/">Home</a></li>
                 <li  class="last" >What is Pathway</li>
                 
                 <li class="last"></li> 
@@ -108,11 +108,11 @@
 			</div>
 			<div class="pf-section no-icon"><p>Designed to give students the confidence and skills needed to succeed in college, Pathway is a low-cost educational opportunity that combines online courses with local gatherings. Students earn college credit that is eligible for transfer to BYU-Idaho and other universities.The program takes three semesters, or one year, to complete and can lead to professional certificates and degrees.</p></div>	
 			<div class="visible-xs pf-section no-icon mobile_s-l">
-				<p><a href="s_version/HPW.html"><img src="../../img/wip/icons/button_standard.png"></a><br><span class="caption">For students who are proficient in English.</span></p>
-				<p><a href="l_version/HPW.html"><img src="../../img/wip/icons/button_lversion.png"></a><br><span class="caption">For students who have intermediate-low English proficiency.</span></p>
+				<p><a href="/working-build/pages/what_is_pathway/s_version/HPW.html"><img src="/working-build/img/wip/icons/button_standard.png"></a><br><span class="caption">For students who are proficient in English.</span></p>
+				<p><a href="/working-build/pages/what_is_pathway/l_version/HPW.html"><img src="/working-build/img/wip/icons/button_lversion.png"></a><br><span class="caption">For students who have intermediate-low English proficiency.</span></p>
 			</div>	
 			<div id="video-info-block">
-				<img alt="play-button" class="play-button img-responsive" src="../../img/wip/play_button.png">
+				<img alt="play-button" class="play-button img-responsive" src="/working-build/img/wip/play_button.png">
 				<p class="note red">Watch the video below to learn&nbsp;more&nbsp;about&nbsp;Pathway.</p>
 			</div>
 			<div class="responsive-video-container wip">
@@ -127,11 +127,11 @@
 			<div class="pf-sidebar header NoAffix footnote" id="sideNav" role="complementary">
 				<ul class="nav pf-sidenav">
 					<li style="margin-bottom:40px;">
-						<a class="no-highlight" href="s_version/HPW.html"><img src="../../img/wip/icons/button_standard.png" alt="s_version"></a>
+						<a class="no-highlight" href="/working-build/pages/what_is_pathway/s_version/HPW.html"><img src="/working-build/img/wip/icons/button_standard.png" alt="s_version"></a>
 						<p>For students who are <strong> proficient in English</strong>, the standard version combines BYU-Idaho online academic courses with either institute or BYU-Idaho religion courses. Students take one academic class and one religion class each of the three semesters.</p>
 					</li>
 					<li>
-						<a class="no-highlight" href="l_version/HPW.html"><img src="../../img/wip/icons/button_lversion.png"></a>
+						<a class="no-highlight" href="/working-build/pages/what_is_pathway/l_version/HPW.html"><img src="/working-build/img/wip/icons/button_lversion.png"></a>
 						<p>For students who <strong>have intermediate-low* English proficiency</strong>, the L&nbsp;version includes academic courses that incorporate English-language instruction as a main component of the coursework. Students meet weekly with a native English speaker throughout the program to improve their English skills. All parts of the program are facilitated entirely in English.</p><p style="font-style:italic;">*The intermediate-low language learner understands and communicates at the sentence level. An English proficiency assessment may be required to determine a student’s eligibility for Pathway.</p>
 					</li>
 				</ul>
@@ -145,15 +145,15 @@
     <div class="footer-links navbar">
       <ul class="nav navbar-nav">
         <li class="social-container"> 
-          <a class="social-icon" href="https://www.facebook.com/BYUIdahoPathway"><img src="/img/social-icons/facebook.png" width="27" height="27"></a> 
-          <a class="social-icon" href="http://www.pinterest.com/byuipop/pathway-online-programs/"><img src="/img/social-icons/pinterest.png" width="27" height="27"></a>
+          <a class="social-icon" href="https://www.facebook.com/BYUIdahoPathway"><img src="/working-build/img/social-icons/facebook.png" width="27" height="27"></a> 
+          <a class="social-icon" href="http://www.pinterest.com/byuipop/pathway-online-programs/"><img src="/working-build/img/social-icons/pinterest.png" width="27" height="27"></a>
           <br class="hidden-xs"> 
-          <a class="social-icon" href="https://twitter.com/BYUIdahoPathway"><img src="/img/social-icons/twitter.png" width="27" height="27"></a> 
-          <a class="social-icon" href="http://instagram.com/Pathway_BYUIdaho"><img src="/img/social-icons/instagram.png" width="27" height="27"></a>
+          <a class="social-icon" href="https://twitter.com/BYUIdahoPathway"><img src="/working-build/img/social-icons/twitter.png" width="27" height="27"></a> 
+          <a class="social-icon" href="http://instagram.com/Pathway_BYUIdaho"><img src="/working-build/img/social-icons/instagram.png" width="27" height="27"></a>
         </li>
         <li class="footer-link hidden-xs"> <a href="http://www.byui.edu/pathway/news-index">Newsroom</a> </li>
-        <li class="footer-link hidden-xs"> <a href="/pages/about-us.html">About Us</a> </li>
-        <li class="footer-link hidden-xs"> <a href="/pages/pathway-faq.html"><img class="faq-bubble" src="/img/faqbubble_small.png" width="16" height="16">FAQ</a> </li>
+        <li class="footer-link hidden-xs"> <a href="/working-build/pages/about-us.html">About Us</a> </li>
+        <li class="footer-link hidden-xs"> <a href="/working-build/pages/pathway-faq.html"><img class="faq-bubble" src="/working-build/img/faqbubble_small.png" width="16" height="16">FAQ</a> </li>
         <li class="footer-link hidden-xs"> <a href="http://www.byui.edu/pathway/videos">Media</a>  </li>
         <li class="footer-link hidden-xs"> <a target="_blank" href="http://www.ldsphilanthropies.org/byu-idaho/funds/byuidaho-pathway.html">Donate</a> </li>
         <li class="footer-link hidden-xs"> <a target="_blank" href="https://byui.az1.qualtrics.com/SE/?SID=SV_3mwtzS9u0NgVnQV">Visit a Location</a> </li>
@@ -164,10 +164,10 @@
 
 <!-- Jquery and Bootstrap JS -->
 <script src="//code.jquery.com/jquery-1.10.2.min.js"></script> 
-<script src="/dist/js/bootstrap.min.js"></script>
+<script src="/working-build/dist/js/bootstrap.min.js"></script>
 
 
-<script src="/js/drawer.js"></script> 
+<script src="/working-build/js/drawer.js"></script> 
 
 
 
