--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<meta name="description" content="">
 	<meta name="author" content="">
 	<link rel="shortcut icon" href="../../docs-assets/ico/favicon.png">
-	<title>Pathway - home</title>
+	<title>Pathway</title>
 	<link rel="apple-touch-icon" sizes="57x57" href="favicon/apple-touch-icon-57x57.png" />
 	<link rel="apple-touch-icon" sizes="114x114" href="favicon/apple-touch-icon-114x114.png" />
 	<link rel="apple-touch-icon" sizes="72x72" href="favicon/apple-touch-icon-72x72.png" />
@@ -26,10 +26,10 @@
 	<meta name="msapplication-TileImage" content="favicon/mstile-144x144.png" />
 
 	<!-- Bootstrap core CSS -->
-	<link href="/dist/css/bootstrap.min.css" rel="stylesheet">
+	<link href="/working-build/dist/css/bootstrap.min.css" rel="stylesheet">
 
 	<!-- Custom styles for this page -->
-	<link href="/styles/home.css" rel="stylesheet">
+	<link href="/working-build/styles/home.css" rel="stylesheet">
 </head>
 
 <body>
@@ -38,12 +38,12 @@
   <div class="container">
     <ul class="nav orange-bar">
       <li class="header-column visible-xs pull-left">&nbsp;</li>
-      <li class="header-column pull-left"> <a id="pathway-logo" class="navbar-brand img-responsive hidden-xs" href="/"></a> <a id="pathway-mobile-logo" class="center-block navbar-brand visible-xs" href="index.htm"></a></li>
-      <li class="header-column pull-right"> <a class="header_contact hidden-xs pull-left" href="pages/advising-and-support.html">Contact Us <img src="/img/speechbubble.png" width="13" height="11" alt="speech"></a>
+      <li class="header-column pull-left"> <a id="pathway-logo" class="navbar-brand img-responsive hidden-xs" href="/working-build/"></a> <a id="pathway-mobile-logo" class="center-block navbar-brand visible-xs" href="index.htm"></a></li>
+      <li class="header-column pull-right"> <a class="header_contact hidden-xs pull-left" href="/working-build/pages/advising-and-support.html">Contact Us <img src="/working-build/img/speechbubble.png" width="13" height="11" alt="speech"></a>
        <form class="navbar-right pull-right ng-pristine ng-valid">
         <!-- Sign-in / User button -->
         <div class="btn-group">
-          <a class="btn signin-btn" style="text-decoration: none;text-transform: none;" href="/Home/ReturnHome"><span class="hidden-xs">Patty Pathway</span><img class="visible-xs" src="/img/usernameman.png" style="padding:0 10px; height:20px;"></a>
+          <a class="btn signin-btn" style="text-decoration: none;text-transform: none;" href="/working-build/"><span class="hidden-xs">Patty Pathway</span><img class="visible-xs" src="/working-build/img/usernameman.png" style="padding:0 10px; height:20px;"></a>
           <button type="button" class="btn signin-btn dropdown-toggle" data-toggle="dropdown">
             <span class="caret"></span>
             <span class="sr-only">Dropdown</span>
@@ -71,11 +71,11 @@
     </div>
     <nav id="siteNavigation" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
-        <li class="nav-1 "><a href="/pages/testimonials/testimonials.html">Testimonials</a></li>
-        <li class="nav-2 "><a href="/pages/what_is_pathway/what_is_pathway.html">What Is Pathway</a></li>
+        <li class="nav-1 "><a href="/working-build/pages/testimonials/testimonials.html">Testimonials</a></li>
+        <li class="nav-2 "><a href="/working-build/pages/what_is_pathway/what_is_pathway.html">What Is Pathway</a></li>
         <li class="nav-3 "><a href="#join">Join Pathway</a></li>
-        <li class="nav-4 "><a href="/pages/speaking_partners/what-is-speaking-partners.html">Speaking Partners</a></li>
-        <li class="nav-5 "><a href="/pages/local_leaders/using-pathway.html">Local Leaders</a></li>
+        <li class="nav-4 "><a href="/working-build/pages/speaking_partners/what-is-speaking-partners.html">Speaking Partners</a></li>
+        <li class="nav-5 "><a href="/working-build/pages/local_leaders/using-pathway.html">Local Leaders</a></li>
       </ul>
     </nav>
   </div>
@@ -98,49 +98,49 @@
       <li data-target="#myCarousel" data-slide-to="6"> </li>
     </ol>
     <div class="carousel-inner">
-      <div class="item active">
-       <a class="full-width-banner teal" href="http://www.byui.edu/pathway/speaking-partner-promo">
-         <img class="visible-md visible-lg" src="img/homepage/MCspeakingPartners_2014_banner_pathway.lds.org.png" alt="Apply Now">
-         <img class="visible-sm visible-xs" src="img/homepage/MCspeakingPartners_2014_tablet_banner_pathway.lds.org.png" alt="Apply Now">
-       </a>
-     </div>
-     <div class="item">  <a href="pages/what_is_pathway/what_is_pathway.html"><img src="img/homepage/whatispathway.jpg" alt="What is Pathway"></a>
+     <div class="item active">  <a href="/working-build/pages/what_is_pathway/what_is_pathway.html"><img src="/working-build/img/homepage/whatispathway.jpg" alt="What is Pathway"></a>
       <div class="container">
         <div class="carousel-caption red">
-          <h1><a href="pages/what_is_pathway/what_is_pathway.html">What is Pathway?</a></h1>
-          <a href="pages/what_is_pathway/what_is_pathway.html">A low-cost educational opportunity that combines online courses with local gatherings.</a>
+          <h1><a href="/working-build/pages/what_is_pathway/what_is_pathway.html">What is Pathway?</a></h1>
+          <a href="/working-build/pages/what_is_pathway/what_is_pathway.html">A low-cost educational opportunity that combines online courses with local gatherings.</a>
         </div>
       </div>
     </div>
-    <div class="item"> <a href="pages/what_is_pathway/what_is_pathway.html"><img src="img/homepage/opportunity_postits.png" alt="Opportunity"></a>
+    <div class="item"> <a href="/working-build/pages/what_is_pathway/what_is_pathway.html"><img src="/working-build/img/homepage/opportunity_postits.png" alt="Opportunity"></a>
       <div class="container">
         <div class="carousel-caption orange">
-          <h1><a href="pages/what_is_pathway/what_is_pathway.html">Open the Door to Opportunity</a></h1>
-          <a href="pages/what_is_pathway/what_is_pathway.html">A unique blend of life skills, academic basics, and gospel learning creates a foundation for growth.</a>
+          <h1><a href="/working-build/pages/what_is_pathway/what_is_pathway.html">Open the Door to Opportunity</a></h1>
+          <a href="/working-build/pages/what_is_pathway/what_is_pathway.html">A unique blend of life skills, academic basics, and gospel learning creates a foundation for growth.</a>
         </div>
       </div>
     </div>
-    <div class="item"><a href="pages/what_is_pathway/l_version/HPW.html"><img src="img/homepage/meet-a-student.jpg" alt="English Language Learners"></a>
+    <div class="item">
+       <a class="full-width-banner orange" target="_blank" href="https://byui.az1.qualtrics.com/SE/?SID=SV_cShGDUV2VTJZgb3">
+         <img class="visible-md visible-lg" src="/working-build/img/homepage/ACTFL_orange.png" alt="Test your english skills">
+         <img class="visible-sm visible-xs" src="/working-build/img/homepage/ACTFL_orange_mobile.png" alt="Test your english skills">
+       </a>
+    </div>
+    <div class="item"><a href="/working-build/pages/what_is_pathway/l_version/HPW.html"><img src="/working-build/img/homepage/meet-a-student.jpg" alt="English Language Learners"></a>
       <div class="container">
         <div class="carousel-caption turquoise">
-          <h1><a href="pages/testimonials/testimonials.html">Meet a Pathway Student</a></h1>
-          <a href="pages/testimonials/testimonials.html">Our students have diverse backgrounds and native languages, but one thing they share is a desire for education.</a>
+          <h1><a href="/working-build/pages/testimonials/testimonials.html">Meet a Pathway Student</a></h1>
+          <a href="/working-build/pages/testimonials/testimonials.html">Our students have diverse backgrounds and native languages, but one thing they share is a desire for education.</a>
         </div>
       </div>
     </div>
-    <div class="item"><a href="pages/testimonials/testimonials.html"><img src="img/homepage/speaking_partners.jpg" alt="Speaking Partners"></a>
+    <div class="item"><a href="/working-build/pages/testimonials/testimonials.html"><img src="/working-build/img/homepage/speaking_partners.jpg" alt="Speaking Partners"></a>
       <div class="container">
         <div class="carousel-caption teal">
-          <h1><a href="pages/what_is_pathway/l_version/HPW.html">English Language Learners</a></h1>
-          <a href="pages/what_is_pathway/l_version/HPW.html">The L version is available to help students become fully proficient in English.</a>
+          <h1><a href="/working-build/pages/what_is_pathway/l_version/HPW.html">English Language Learners</a></h1>
+          <a href="/working-build/pages/what_is_pathway/l_version/HPW.html">The L version is available to help students become fully proficient in English.</a>
         </div>
       </div>
     </div>
-    <div class="item"><a href="pages/advising-and-support.html"><img src="img/homepage/need_help.png" alt="Help"></a>
+    <div class="item"><a href="/working-build/pages/advising-and-support.html"><img src="/working-build/img/homepage/need_help.png" alt="Help"></a>
       <div class="container">
         <div class="carousel-caption green">
-          <h1><a href="pages/advising-and-support.html">Need Help?</a></h1>
-          <a href="pages/advising-and-support.html">Pathway Support is ready to guide you through your educational journey.</a>
+          <h1><a href="/working-build/pages/advising-and-support.html">Need Help?</a></h1>
+          <a href="/working-build/pages/advising-and-support.html">Pathway Support is ready to guide you through your educational journey.</a>
         </div>
       </div>
     </div>
@@ -152,22 +152,22 @@
 <div class="container"> 
   <div class="row">
     <div class="feature col-sm-4 col-xs-6"> 
-      <a href="pages/what_is_pathway/what_is_pathway.html"><img src="img/homepage/localgatherings.png" class="img-responsive"></a>
-      <div class="featureMaster feature1 first-columns"><a href="pages/what_is_pathway/what_is_pathway.html">Online Courses with local gatherings</a></div>
+      <a href="/working-build/pages/what_is_pathway/what_is_pathway.html"><img src="/working-build/img/homepage/localgatherings.png" class="img-responsive"></a>
+      <div class="featureMaster feature1 first-columns"><a href="/working-build/pages/what_is_pathway/what_is_pathway.html">Online Courses with local gatherings</a></div>
     </div>
     <div class="feature col-sm-4 col-xs-6"> 
-      <a href="#apply"><img src="img/homepage/applyhere.png" class="img-responsive"></a>
+      <a href="#apply"><img src="/working-build/img/homepage/applyhere.png" class="img-responsive"></a>
       <div class="featureMaster feature2 second-columns"><a href="#apply">Find a Location and&nbsp;Apply</a></div>
     </div>
     <div class="feature col-sm-4 col-xs-6"> 
-      <a href="pages/advising-and-support.html"><img src="img/homepage/pathwayadvising.png" class="img-responsive"></a>
-      <div class="featureMaster feature3 third-columns"><a href="pages/advising-and-support.html">friendly support team</a></div>
+      <a href="/working-build/pages/advising-and-support.html"><img src="/working-build/img/homepage/pathwayadvising.png" class="img-responsive"></a>
+      <div class="featureMaster feature3 third-columns"><a href="/working-build/pages/advising-and-support.html">friendly support team</a></div>
     </div>
     <div class="feature visible-xs col-xs-6">
       <ul class="nav navbar-nav footer-box">
         <li> <a href="http://www.byui.edu/pathway/news-index">Newsroom</a> </li>
-        <li> <a href="pages/about-us.html">About Us</a> </li>
-        <li> <a href="pages/pathway-faq.html">FAQ</a> </li>
+        <li> <a href="/working-build/pages/about-us.html">About Us</a> </li>
+        <li> <a href="/working-build/pages/pathway-faq.html">FAQ</a> </li>
         <li> <a href="http://www.byui.edu/pathway/videos">Media</a> </li>
         <li> <a target="_blank" href="http://www.ldsphilanthropies.org/byu-idaho/funds/byuidaho-pathway.html">Donate</a> </li>
         <li> <a target="_blank" href="https://byui.az1.qualtrics.com/SE/?SID=SV_3mwtzS9u0NgVnQV">Visit a Location</a> </li>
@@ -181,15 +181,15 @@
     <div class="footer-links navbar">
       <ul class="nav navbar-nav">
         <li class="social-container"> 
-          <a class="social-icon" href="https://www.facebook.com/BYUIdahoPathway"><img src="/img/social-icons/facebook.png" width="27" height="27"></a> 
-          <a class="social-icon" href="http://www.pinterest.com/byuipop/pathway-online-programs/"><img src="/img/social-icons/pinterest.png" width="27" height="27"></a>
+          <a class="social-icon" href="https://www.facebook.com/BYUIdahoPathway"><img src="/working-build/img/social-icons/facebook.png" width="27" height="27"></a> 
+          <a class="social-icon" href="http://www.pinterest.com/byuipop/pathway-online-programs/"><img src="/working-build/img/social-icons/pinterest.png" width="27" height="27"></a>
           <br class="hidden-xs"> 
-          <a class="social-icon" href="https://twitter.com/BYUIdahoPathway"><img src="/img/social-icons/twitter.png" width="27" height="27"></a> 
-          <a class="social-icon" href="http://instagram.com/Pathway_BYUIdaho"><img src="/img/social-icons/instagram.png" width="27" height="27"></a>
+          <a class="social-icon" href="https://twitter.com/BYUIdahoPathway"><img src="/working-build/img/social-icons/twitter.png" width="27" height="27"></a> 
+          <a class="social-icon" href="http://instagram.com/Pathway_BYUIdaho"><img src="/working-build/img/social-icons/instagram.png" width="27" height="27"></a>
         </li>
         <li class="footer-link hidden-xs"> <a href="http://www.byui.edu/pathway/news-index">Newsroom</a> </li>
-        <li class="footer-link hidden-xs"> <a href="/pages/about-us.html">About Us</a> </li>
-        <li class="footer-link hidden-xs"> <a href="/pages/pathway-faq.html"><img class="faq-bubble" src="/img/faqbubble_small.png" width="16" height="16">FAQ</a> </li>
+        <li class="footer-link hidden-xs"> <a href="/working-build/pages/about-us.html">About Us</a> </li>
+        <li class="footer-link hidden-xs"> <a href="/working-build/pages/pathway-faq.html"><img class="faq-bubble" src="/working-build/img/faqbubble_small.png" width="16" height="16">FAQ</a> </li>
         <li class="footer-link hidden-xs"> <a href="http://www.byui.edu/pathway/videos">Media</a>  </li>
         <li class="footer-link hidden-xs"> <a target="_blank" href="http://www.ldsphilanthropies.org/byu-idaho/funds/byuidaho-pathway.html">Donate</a> </li>
         <li class="footer-link hidden-xs"> <a target="_blank" href="https://byui.az1.qualtrics.com/SE/?SID=SV_3mwtzS9u0NgVnQV">Visit a Location</a> </li>
@@ -200,10 +200,10 @@
 
 <!-- Jquery and Bootstrap JS -->
 <script src="//code.jquery.com/jquery-1.10.2.min.js"></script> 
-<script src="/dist/js/bootstrap.min.js"></script>
+<script src="/working-build/dist/js/bootstrap.min.js"></script>
 
 
-<script src="/js/drawer.js"></script> 
+<script src="/working-build/js/drawer.js"></script> 
 
 
 
