--- a/pages/local_leaders/roles-responsibilities.html
+++ b/pages/local_leaders/roles-responsibilities.html
@@ -26,10 +26,10 @@
 	<meta name="msapplication-TileImage" content="favicon/mstile-144x144.png" />
 
 	<!-- Bootstrap core CSS -->
-	<link href="/dist/css/bootstrap.min.css" rel="stylesheet">
+	<link href="/working-build/dist/css/bootstrap.min.css" rel="stylesheet">
 
 	<!-- Custom styles for this page -->
-	<link href="/styles/local_leaders.css" rel="stylesheet">
+	<link href="/working-build/styles/local_leaders.css" rel="stylesheet">
 </head>
 
 <body>
@@ -38,12 +38,12 @@
   <div class="container">
     <ul class="nav orange-bar">
       <li class="header-column visible-xs pull-left">&nbsp;</li>
-      <li class="header-column pull-left"> <a id="pathway-logo" class="navbar-brand img-responsive hidden-xs" href="/"></a> <a id="pathway-mobile-logo" class="center-block navbar-brand visible-xs" href="index.htm"></a></li>
-      <li class="header-column pull-right"> <a class="header_contact hidden-xs pull-left" href="pages/advising-and-support.html">Contact Us <img src="/img/speechbubble.png" width="13" height="11" alt="speech"></a>
+      <li class="header-column pull-left"> <a id="pathway-logo" class="navbar-brand img-responsive hidden-xs" href="/working-build/"></a> <a id="pathway-mobile-logo" class="center-block navbar-brand visible-xs" href="index.htm"></a></li>
+      <li class="header-column pull-right"> <a class="header_contact hidden-xs pull-left" href="/working-build/pages/advising-and-support.html">Contact Us <img src="/working-build/img/speechbubble.png" width="13" height="11" alt="speech"></a>
        <form class="navbar-right pull-right ng-pristine ng-valid">
         <!-- Sign-in / User button -->
         <div class="btn-group">
-          <a class="btn signin-btn" style="text-decoration: none;text-transform: none;" href="/Home/ReturnHome"><span class="hidden-xs">Patty Pathway</span><img class="visible-xs" src="/img/usernameman.png" style="padding:0 10px; height:20px;"></a>
+          <a class="btn signin-btn" style="text-decoration: none;text-transform: none;" href="/working-build/"><span class="hidden-xs">Patty Pathway</span><img class="visible-xs" src="/working-build/img/usernameman.png" style="padding:0 10px; height:20px;"></a>
           <button type="button" class="btn signin-btn dropdown-toggle" data-toggle="dropdown">
             <span class="caret"></span>
             <span class="sr-only">Dropdown</span>
@@ -71,11 +71,11 @@
     </div>
     <nav id="siteNavigation" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
-        <li class="nav-1 "><a href="/pages/testimonials/testimonials.html">Testimonials</a></li>
-        <li class="nav-2 "><a href="/pages/what_is_pathway/what_is_pathway.html">What Is Pathway</a></li>
+        <li class="nav-1 "><a href="/working-build/pages/testimonials/testimonials.html">Testimonials</a></li>
+        <li class="nav-2 "><a href="/working-build/pages/what_is_pathway/what_is_pathway.html">What Is Pathway</a></li>
         <li class="nav-3 "><a href="#join">Join Pathway</a></li>
-        <li class="nav-4 "><a href="/pages/speaking_partners/what-is-speaking-partners.html">Speaking Partners</a></li>
-        <li class="nav-5 nav_active"><a href="/pages/local_leaders/using-pathway.html">Local Leaders</a></li>
+        <li class="nav-4 "><a href="/working-build/pages/speaking_partners/what-is-speaking-partners.html">Speaking Partners</a></li>
+        <li class="nav-5 nav_active"><a href="/working-build/pages/local_leaders/using-pathway.html">Local Leaders</a></li>
       </ul>
     </nav>
   </div>
@@ -88,7 +88,7 @@
     <div class="container">
         <div id="breadCrumb" class="breadCrumb module">
             <ul>
-                <li class="first"><a href="../index.htm">Home</a></li>
+                <li class="first"><a href="/working-build/">Home</a></li>
                 <li >Local Leaders</li>
                 
                 <li class="last">Roles and Responsibilities</li> 
@@ -104,7 +104,7 @@
   <div class="row row-offcanvas row-offcanvas-right">
     <div class="col-xs-12 col-sm-8 main-content">
       <button type="button" onClick="open_side();" class="navbar-toggle sidebar-btn collapsed">
-        <img id="arrow-icon" src="../../img/arrow.png" width="14" height="14" alt="arrow">
+        <img id="arrow-icon" src="/working-build/img/arrow.png" width="14" height="14" alt="arrow">
       </button>
       <div class="hero pf-page-header no-icon">
         <h1 id="Standard" class="page-title">Local Leaders</h1>
@@ -138,7 +138,7 @@
       </div>
       <div class="pf-section no-icon">
         <h3 class="p-heading blue">Role of Institutes</h3>
-        <p>Because Pathway's primary target audience is Church members between the ages of 18 and 30, local institute directors play an important role in the program. Institute directors help Pathway by coordinating institute classes for Pathway students, offering institute courses for transferrable credit, and much more. Click <a href="docs/Pathway_Guidelines_for_Institute.pdf" target="_blank">here</a> for specific information and guidelines designed to help institute directors implement Pathway at their location.</p>
+        <p>Because Pathway's primary target audience is Church members between the ages of 18 and 30, local institute directors play an important role in the program. Institute directors help Pathway by coordinating institute classes for Pathway students, offering institute courses for transferrable credit, and much more. Click <a href="/working-build/docs/Pathway_Guidelines_for_Institute.pdf" target="_blank">here</a> for specific information and guidelines designed to help institute directors implement Pathway at their location.</p>
       </div>
       <div class="pf-section no-icon">
         <a id="roleofpathwaymissionaries"></a><h3 class="p-heading blue">Role of Pathway Missionaries</h3>
@@ -156,11 +156,11 @@
 <div class="col-xs-6 col-sm-4 sidebar-offcanvas pull-right" id="sidebar" role="navigation">
   <div class="pf-sidebar header NoAffix footnote" id="sideNav" role="complementary">
     <ul class="nav navy_blue pf-sidenav">
-      <li ><a href="using-pathway.html"> <span class="caret"></span> Using Pathway in Your Ministry</a></li>
-      <li ><a href="getting-started.html"> <span class="caret"></span> Getting Started</a> </li>
-      <li  class="active" > <a href="roles-responsibilities.html"> <span class="caret"></span> Roles &amp; Responsibilities</a></li>
-      <li ><a href="request-a-site.html"> <span class="caret"></span> Request a Site</a></li>
-      <li><a href="../testimonials/testimonials.html"> <span class="caret"></span> The Pathway Experience</a></li>
+      <li ><a href="/working-build/pages/local_leaders/using-pathway.html"> <span class="caret"></span> Using Pathway in Your Ministry</a></li>
+      <li ><a href="/working-build/pages/local_leaders/getting-started.html"> <span class="caret"></span> Getting Started</a> </li>
+      <li  class="active" > <a href="/working-build/pages/local_leaders/roles-responsibilities.html"> <span class="caret"></span> Roles &amp; Responsibilities</a></li>
+      <li ><a href="/working-build/pages/local_leaders/request-a-site.html"> <span class="caret"></span> Request a Site</a></li>
+      <li><a href="/working-build/pages/testimonials/testimonials.html"> <span class="caret"></span> The Pathway Experience</a></li>
     </ul>
   </div>
 </div>
@@ -173,15 +173,15 @@
     <div class="footer-links navbar">
       <ul class="nav navbar-nav">
         <li class="social-container"> 
-          <a class="social-icon" href="https://www.facebook.com/BYUIdahoPathway"><img src="/img/social-icons/facebook.png" width="27" height="27"></a> 
-          <a class="social-icon" href="http://www.pinterest.com/byuipop/pathway-online-programs/"><img src="/img/social-icons/pinterest.png" width="27" height="27"></a>
+          <a class="social-icon" href="https://www.facebook.com/BYUIdahoPathway"><img src="/working-build/img/social-icons/facebook.png" width="27" height="27"></a> 
+          <a class="social-icon" href="http://www.pinterest.com/byuipop/pathway-online-programs/"><img src="/working-build/img/social-icons/pinterest.png" width="27" height="27"></a>
           <br class="hidden-xs"> 
-          <a class="social-icon" href="https://twitter.com/BYUIdahoPathway"><img src="/img/social-icons/twitter.png" width="27" height="27"></a> 
-          <a class="social-icon" href="http://instagram.com/Pathway_BYUIdaho"><img src="/img/social-icons/instagram.png" width="27" height="27"></a>
+          <a class="social-icon" href="https://twitter.com/BYUIdahoPathway"><img src="/working-build/img/social-icons/twitter.png" width="27" height="27"></a> 
+          <a class="social-icon" href="http://instagram.com/Pathway_BYUIdaho"><img src="/working-build/img/social-icons/instagram.png" width="27" height="27"></a>
         </li>
         <li class="footer-link hidden-xs"> <a href="http://www.byui.edu/pathway/news-index">Newsroom</a> </li>
-        <li class="footer-link hidden-xs"> <a href="/pages/about-us.html">About Us</a> </li>
-        <li class="footer-link hidden-xs"> <a href="/pages/pathway-faq.html"><img class="faq-bubble" src="/img/faqbubble_small.png" width="16" height="16">FAQ</a> </li>
+        <li class="footer-link hidden-xs"> <a href="/working-build/pages/about-us.html">About Us</a> </li>
+        <li class="footer-link hidden-xs"> <a href="/working-build/pages/pathway-faq.html"><img class="faq-bubble" src="/working-build/img/faqbubble_small.png" width="16" height="16">FAQ</a> </li>
         <li class="footer-link hidden-xs"> <a href="http://www.byui.edu/pathway/videos">Media</a>  </li>
         <li class="footer-link hidden-xs"> <a target="_blank" href="http://www.ldsphilanthropies.org/byu-idaho/funds/byuidaho-pathway.html">Donate</a> </li>
         <li class="footer-link hidden-xs"> <a target="_blank" href="https://byui.az1.qualtrics.com/SE/?SID=SV_3mwtzS9u0NgVnQV">Visit a Location</a> </li>
@@ -192,10 +192,10 @@
 
 <!-- Jquery and Bootstrap JS -->
 <script src="//code.jquery.com/jquery-1.10.2.min.js"></script> 
-<script src="/dist/js/bootstrap.min.js"></script>
+<script src="/working-build/dist/js/bootstrap.min.js"></script>
 
 
-<script src="/js/drawer.js"></script> 
+<script src="/working-build/js/drawer.js"></script> 
 
 
 
