--- a/pages/speaking_partners/what-is-speaking-partners.html
+++ b/pages/speaking_partners/what-is-speaking-partners.html
@@ -26,10 +26,10 @@
 	<meta name="msapplication-TileImage" content="favicon/mstile-144x144.png" />
 
 	<!-- Bootstrap core CSS -->
-	<link href="/dist/css/bootstrap.min.css" rel="stylesheet">
+	<link href="/working-build/dist/css/bootstrap.min.css" rel="stylesheet">
 
 	<!-- Custom styles for this page -->
-	<link href="/styles/speaking_partners.css" rel="stylesheet">
+	<link href="/working-build/styles/speaking_partners.css" rel="stylesheet">
 </head>
 
 <body>
@@ -38,12 +38,12 @@
   <div class="container">
     <ul class="nav orange-bar">
       <li class="header-column visible-xs pull-left">&nbsp;</li>
-      <li class="header-column pull-left"> <a id="pathway-logo" class="navbar-brand img-responsive hidden-xs" href="/"></a> <a id="pathway-mobile-logo" class="center-block navbar-brand visible-xs" href="index.htm"></a></li>
-      <li class="header-column pull-right"> <a class="header_contact hidden-xs pull-left" href="pages/advising-and-support.html">Contact Us <img src="/img/speechbubble.png" width="13" height="11" alt="speech"></a>
+      <li class="header-column pull-left"> <a id="pathway-logo" class="navbar-brand img-responsive hidden-xs" href="/working-build/"></a> <a id="pathway-mobile-logo" class="center-block navbar-brand visible-xs" href="index.htm"></a></li>
+      <li class="header-column pull-right"> <a class="header_contact hidden-xs pull-left" href="/working-build/pages/advising-and-support.html">Contact Us <img src="/working-build/img/speechbubble.png" width="13" height="11" alt="speech"></a>
        <form class="navbar-right pull-right ng-pristine ng-valid">
         <!-- Sign-in / User button -->
         <div class="btn-group">
-          <a class="btn signin-btn" style="text-decoration: none;text-transform: none;" href="/Home/ReturnHome"><span class="hidden-xs">Patty Pathway</span><img class="visible-xs" src="/img/usernameman.png" style="padding:0 10px; height:20px;"></a>
+          <a class="btn signin-btn" style="text-decoration: none;text-transform: none;" href="/working-build/"><span class="hidden-xs">Patty Pathway</span><img class="visible-xs" src="/working-build/img/usernameman.png" style="padding:0 10px; height:20px;"></a>
           <button type="button" class="btn signin-btn dropdown-toggle" data-toggle="dropdown">
             <span class="caret"></span>
             <span class="sr-only">Dropdown</span>
@@ -71,11 +71,11 @@
     </div>
     <nav id="siteNavigation" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
-        <li class="nav-1 "><a href="/pages/testimonials/testimonials.html">Testimonials</a></li>
-        <li class="nav-2 "><a href="/pages/what_is_pathway/what_is_pathway.html">What Is Pathway</a></li>
+        <li class="nav-1 "><a href="/working-build/pages/testimonials/testimonials.html">Testimonials</a></li>
+        <li class="nav-2 "><a href="/working-build/pages/what_is_pathway/what_is_pathway.html">What Is Pathway</a></li>
         <li class="nav-3 "><a href="#join">Join Pathway</a></li>
-        <li class="nav-4 nav_active"><a href="/pages/speaking_partners/what-is-speaking-partners.html">Speaking Partners</a></li>
-        <li class="nav-5 "><a href="/pages/local_leaders/using-pathway.html">Local Leaders</a></li>
+        <li class="nav-4 nav_active"><a href="/working-build/pages/speaking_partners/what-is-speaking-partners.html">Speaking Partners</a></li>
+        <li class="nav-5 "><a href="/working-build/pages/local_leaders/using-pathway.html">Local Leaders</a></li>
       </ul>
     </nav>
   </div>
@@ -88,7 +88,7 @@
     <div class="container">
         <div id="breadCrumb" class="breadCrumb module">
             <ul>
-                <li class="first"><a href="../index.htm">Home</a></li>
+                <li class="first"><a href="/working-build/">Home</a></li>
                 <li  class="last" >Speaking Partners</li>
                 
                 <li class="last"></li> 
@@ -104,17 +104,17 @@
   <div class="row row-offcanvas row-offcanvas-right">
     <div class="col-xs-12 col-sm-8 main-content">
       <button type="button" onClick="open_side();" class="navbar-toggle sidebar-btn collapsed">
-        <img id="arrow-icon" src="/img/arrow.png" width="14" height="14" alt="arrow"></button>
+        <img id="arrow-icon" src="/working-build/img/arrow.png" width="14" height="14" alt="arrow"></button>
         <br>
         <div class="hero pf-page-header">
-          <img alt="speaking partners icon" src="/img/speaking-partners-main/website_speakingpartners_image5.png" />
+          <img alt="speaking partners icon" src="/working-build/img/speaking-partners-main/website_speakingpartners_image5.png" />
           <h2 class="heading green">Speaking Partners</h2>
         </div>
         <br>
         <div class="pf-section">
 
           <p>We’ve all heard that English is the “universal language.” But do you know why? Perhaps it’s because those who know English typically make more money than those who don’t. Or maybe it’s because 1/4 of the world’s population speak the language at a useful level. <br><br>But no matter the reason, one thing is certain &mdash; learning English sets people up for better opportunities educationally, socially, economically, and more. </p>
-          <div class="img-responsive"><img src="/img/speaking-partners-main/website_speakingpartners_image1.png"></div>
+          <div class="img-responsive"><img src="/working-build/img/speaking-partners-main/website_speakingpartners_image1.png"></div>
         </div>  
         <h3 class="inset">That's where Speaking Partners comes in.</h3>
 
@@ -122,13 +122,13 @@
 
         <h2 class="subsection"><a id="works"></a>How Speaking Partners Works</h2>
 
-        <div class="img-responsive"><img src="/img/speaking-partners-main/website_speakingpartners_image2.png"></div>
+        <div class="img-responsive"><img src="/working-build/img/speaking-partners-main/website_speakingpartners_image2.png"></div>
         <div class="image-caption-1">Students enrolled in Pathway’s L version (for non-native English speakers) practice and improve their English abilities through conversations with fluent English speakers. </div>
-        <div class="img-responsive"><img src="/img/speaking-partners-main/website_speakingpartners_image3.png"></div>
+        <div class="img-responsive"><img src="/working-build/img/speaking-partners-main/website_speakingpartners_image3.png"></div>
         <div class="image-caption-2">Each discussion lasts 30 minutes and occurs once a week for 12 consecutive&nbsp;weeks.</div>
         <br>
         <div id="video-info-block">
-          <img alt="play-button" class="play-button img-responsive" src="/img/speaking-partners-main/speakingpartner_playbutton.png">
+          <img alt="play-button" class="play-button img-responsive" src="/working-build/img/speaking-partners-main/speakingpartner_playbutton.png">
           <p class="note green">Watch the video below to learn more about the Speaking Partner Program.</p>
         </div>
 
@@ -150,10 +150,10 @@
           </ul>
         </div>
 
-        <a href="https://web.byui.edu/SpeakingPartners/Volunteer/" target="_blank"><img class="img-responsive img-space" src="../../img/speaking-partners-main/speakingpartner_signup.png" alt="Click here to sign up as a speaking partner" /></a>
+        <a href="https://web.byui.edu/SpeakingPartners/Volunteer/" target="_blank"><img class="img-responsive img-space" src="/working-build/img/speaking-partners-main/speakingpartner_signup.png" alt="Click here to sign up as a speaking partner" /></a>
 
         <div id="video-info-block">
-          <img alt="play-button" class="play-button img-responsive" src="../../img/speaking-partners-main/speakingpartner_playbutton.png">
+          <img alt="play-button" class="play-button img-responsive" src="/working-build/img/speaking-partners-main/speakingpartner_playbutton.png">
           <p class="note green">To watch more videos or learn more about Pathway, visit our <a target="_blank" href="http://www.byui.edu/pathway/videos">Media Page</a>, or click on one of the social media links at the bottom of the page</p>
         </div>
       </div>
@@ -161,15 +161,15 @@
 <div class="col-xs-6 col-sm-4 sidebar-offcanvas pull-right" id="sidebar" role="navigation">
   <div class="pf-sidebar header NoAffix footnote" id="sideNav" role="complementary">
     <ul class="nav darkgreen pf-sidenav">
-      <li  class="active" > <a href="what-is-speaking-partners.html"> <span class="caret"></span> Speaking Partners</a> </li>
-      <li > <a href="signup.html"> <span class="caret"></span> Sign Up / Find&nbsp;A&nbsp;Partner</a> </li>
-      <li > <a href="discussion-materials.html"> <span class="caret"></span> Discussion Materials</a>
+      <li  class="active" > <a href="/working-build/pages/speaking_partners/what-is-speaking-partners.html"> <span class="caret"></span> Speaking Partners</a> </li>
+      <li > <a href="/working-build/pages/speaking_partners/signup.html"> <span class="caret"></span> Sign Up / Find&nbsp;A&nbsp;Partner</a> </li>
+      <li > <a href="/working-build/pages/speaking_partners/discussion-materials.html"> <span class="caret"></span> Discussion Materials</a>
       </li>
-      <li > <a href="guidelines.html"> <span class="caret"></span> Guidelines for Mentors</a>
+      <li > <a href="/working-build/pages/speaking_partners/guidelines.html"> <span class="caret"></span> Guidelines for Mentors</a>
       </li>
-      <li > <a href="contact-us.html"> <span class="caret"></span> Contact Us</a>
+      <li > <a href="/working-build/pages/speaking_partners/contact-us.html"> <span class="caret"></span> Contact Us</a>
       </li>
-      <li> <a href="../pathway-faq.html#sp-section"> <span class="caret"></span> FAQ</a>
+      <li> <a href="/working-build/pages/pathway-faq.html#sp-section"> <span class="caret"></span> FAQ</a>
       </li>
     </ul>
   </div>
@@ -183,15 +183,15 @@
     <div class="footer-links navbar">
       <ul class="nav navbar-nav">
         <li class="social-container"> 
-          <a class="social-icon" href="https://www.facebook.com/BYUIdahoPathway"><img src="/img/social-icons/facebook.png" width="27" height="27"></a> 
-          <a class="social-icon" href="http://www.pinterest.com/byuipop/pathway-online-programs/"><img src="/img/social-icons/pinterest.png" width="27" height="27"></a>
+          <a class="social-icon" href="https://www.facebook.com/BYUIdahoPathway"><img src="/working-build/img/social-icons/facebook.png" width="27" height="27"></a> 
+          <a class="social-icon" href="http://www.pinterest.com/byuipop/pathway-online-programs/"><img src="/working-build/img/social-icons/pinterest.png" width="27" height="27"></a>
           <br class="hidden-xs"> 
-          <a class="social-icon" href="https://twitter.com/BYUIdahoPathway"><img src="/img/social-icons/twitter.png" width="27" height="27"></a> 
-          <a class="social-icon" href="http://instagram.com/Pathway_BYUIdaho"><img src="/img/social-icons/instagram.png" width="27" height="27"></a>
+          <a class="social-icon" href="https://twitter.com/BYUIdahoPathway"><img src="/working-build/img/social-icons/twitter.png" width="27" height="27"></a> 
+          <a class="social-icon" href="http://instagram.com/Pathway_BYUIdaho"><img src="/working-build/img/social-icons/instagram.png" width="27" height="27"></a>
         </li>
         <li class="footer-link hidden-xs"> <a href="http://www.byui.edu/pathway/news-index">Newsroom</a> </li>
-        <li class="footer-link hidden-xs"> <a href="/pages/about-us.html">About Us</a> </li>
-        <li class="footer-link hidden-xs"> <a href="/pages/pathway-faq.html"><img class="faq-bubble" src="/img/faqbubble_small.png" width="16" height="16">FAQ</a> </li>
+        <li class="footer-link hidden-xs"> <a href="/working-build/pages/about-us.html">About Us</a> </li>
+        <li class="footer-link hidden-xs"> <a href="/working-build/pages/pathway-faq.html"><img class="faq-bubble" src="/working-build/img/faqbubble_small.png" width="16" height="16">FAQ</a> </li>
         <li class="footer-link hidden-xs"> <a href="http://www.byui.edu/pathway/videos">Media</a>  </li>
         <li class="footer-link hidden-xs"> <a target="_blank" href="http://www.ldsphilanthropies.org/byu-idaho/funds/byuidaho-pathway.html">Donate</a> </li>
         <li class="footer-link hidden-xs"> <a target="_blank" href="https://byui.az1.qualtrics.com/SE/?SID=SV_3mwtzS9u0NgVnQV">Visit a Location</a> </li>
@@ -202,10 +202,10 @@
 
 <!-- Jquery and Bootstrap JS -->
 <script src="//code.jquery.com/jquery-1.10.2.min.js"></script> 
-<script src="/dist/js/bootstrap.min.js"></script>
+<script src="/working-build/dist/js/bootstrap.min.js"></script>
 
 
-<script src="/js/drawer.js"></script> 
+<script src="/working-build/js/drawer.js"></script> 
 
 
 
