--- a/pages/what_is_pathway/l_version/admission.html
+++ b/pages/what_is_pathway/l_version/admission.html
@@ -26,10 +26,10 @@
 	<meta name="msapplication-TileImage" content="favicon/mstile-144x144.png" />
 
 	<!-- Bootstrap core CSS -->
-	<link href="/dist/css/bootstrap.min.css" rel="stylesheet">
+	<link href="/working-build/dist/css/bootstrap.min.css" rel="stylesheet">
 
 	<!-- Custom styles for this page -->
-	<link href="/styles/what_is_pathway.css" rel="stylesheet">
+	<link href="/working-build/styles/what_is_pathway.css" rel="stylesheet">
 </head>
 
 <body>
@@ -38,12 +38,12 @@
   <div class="container">
     <ul class="nav orange-bar">
       <li class="header-column visible-xs pull-left">&nbsp;</li>
-      <li class="header-column pull-left"> <a id="pathway-logo" class="navbar-brand img-responsive hidden-xs" href="/"></a> <a id="pathway-mobile-logo" class="center-block navbar-brand visible-xs" href="index.htm"></a></li>
-      <li class="header-column pull-right"> <a class="header_contact hidden-xs pull-left" href="pages/advising-and-support.html">Contact Us <img src="/img/speechbubble.png" width="13" height="11" alt="speech"></a>
+      <li class="header-column pull-left"> <a id="pathway-logo" class="navbar-brand img-responsive hidden-xs" href="/working-build/"></a> <a id="pathway-mobile-logo" class="center-block navbar-brand visible-xs" href="index.htm"></a></li>
+      <li class="header-column pull-right"> <a class="header_contact hidden-xs pull-left" href="/working-build/pages/advising-and-support.html">Contact Us <img src="/working-build/img/speechbubble.png" width="13" height="11" alt="speech"></a>
        <form class="navbar-right pull-right ng-pristine ng-valid">
         <!-- Sign-in / User button -->
         <div class="btn-group">
-          <a class="btn signin-btn" style="text-decoration: none;text-transform: none;" href="/Home/ReturnHome"><span class="hidden-xs">Patty Pathway</span><img class="visible-xs" src="/img/usernameman.png" style="padding:0 10px; height:20px;"></a>
+          <a class="btn signin-btn" style="text-decoration: none;text-transform: none;" href="/working-build/"><span class="hidden-xs">Patty Pathway</span><img class="visible-xs" src="/working-build/img/usernameman.png" style="padding:0 10px; height:20px;"></a>
           <button type="button" class="btn signin-btn dropdown-toggle" data-toggle="dropdown">
             <span class="caret"></span>
             <span class="sr-only">Dropdown</span>
@@ -71,11 +71,11 @@
     </div>
     <nav id="siteNavigation" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
-        <li class="nav-1 "><a href="/pages/testimonials/testimonials.html">Testimonials</a></li>
-        <li class="nav-2 nav_active"><a href="/pages/what_is_pathway/what_is_pathway.html">What Is Pathway</a></li>
+        <li class="nav-1 "><a href="/working-build/pages/testimonials/testimonials.html">Testimonials</a></li>
+        <li class="nav-2 nav_active"><a href="/working-build/pages/what_is_pathway/what_is_pathway.html">What Is Pathway</a></li>
         <li class="nav-3 "><a href="#join">Join Pathway</a></li>
-        <li class="nav-4 "><a href="/pages/speaking_partners/what-is-speaking-partners.html">Speaking Partners</a></li>
-        <li class="nav-5 "><a href="/pages/local_leaders/using-pathway.html">Local Leaders</a></li>
+        <li class="nav-4 "><a href="/working-build/pages/speaking_partners/what-is-speaking-partners.html">Speaking Partners</a></li>
+        <li class="nav-5 "><a href="/working-build/pages/local_leaders/using-pathway.html">Local Leaders</a></li>
       </ul>
     </nav>
   </div>
@@ -88,8 +88,8 @@
     <div class="container">
         <div id="breadCrumb" class="breadCrumb module">
             <ul>
-                <li class="first"><a href="/">Home</a></li>
-                <li><a href="/pages/what_is_pathway/what_is_pathway.html">What Is Pathway</a></li>
+                <li class="first"><a href="/working-build/">Home</a></li>
+                <li><a href="/working-build/pages/what_is_pathway/what_is_pathway.html">What Is Pathway</a></li>
                 <li class="pipe-divider">l Version</li>
                 
                 <li class="last lowercase">Admission Requirements</li>
@@ -106,16 +106,16 @@
 	<div class="row row-offcanvas row-offcanvas-right">
 		<div class="col-xs-12 col-sm-8 main-content">
 			<button type="button" onClick="open_side();" class="navbar-toggle sidebar-btn collapsed">
-				<img id="arrow-icon" src="../../../img/arrow.png" width="14" height="14" alt="arrow">
+				<img id="arrow-icon" src="/working-build/img/arrow.png" width="14" height="14" alt="arrow">
 			</button>
 			<div class="hero pf-page-header">
-				<img src="../../../img/wip/icons/lversion.png" alt="standardLogo">
+				<img src="/working-build/img/wip/icons/lversion.png" alt="standardLogo">
 				<h1 id="Standard" class="page-title">L Version</h1>
-				<p class="page-summary">For students who have intermediate-low English proficiency <a target="_blank" href="https://byui.az1.qualtrics.com/SE/?SID=SV_cShGDUV2VTJZgb3"><img style="margin: 10px 0 0 0; position: relative;" src="../../../img/EnglishTestButton.png"></a></p>
+				<p class="page-summary">For students who have intermediate-low English proficiency <a target="_blank" href="https://byui.az1.qualtrics.com/SE/?SID=SV_cShGDUV2VTJZgb3"><img style="margin: 10px 0 0 0; position: relative;" src="/working-build/img/EnglishTestButton.png"></a></p>
 			</div>
 			<div class="pf-section">
 				<div class="pf-page-header">
-					<img src="../../../img/wip/icons/checklist.png" alt="checklist">
+					<img src="/working-build/img/wip/icons/checklist.png" alt="checklist">
 					<h2 id="AdmissionRequirements" class="subheading">Admission Requirements</h2>
 				</div>
 				<div class="main-content">
@@ -144,53 +144,53 @@
 					</div>
 					<!-- End Widget -->
 					<br><br>
-					<a href=""><img id="location-icon" src="../../../img/admission/location_blue.png" alt="location"></a>
+					<a href=""><img id="location-icon" src="/working-build/img/admission/location_blue.png" alt="location"></a>
 					<div class="click-here turquoise"><a href="#joinpathway">Click here to search for a Pathway location/site near you and apply.</a></div>
-					<img class="img-space" id="adm-img" src="../../../img/admission/worldmap.png" alt="location map" width="100%"></a>
+					<img class="img-space" id="adm-img" src="/working-build/img/admission/worldmap.png" alt="location map" width="100%"></a>
 					<div class="main-content"><div id="footnote"><strong>+</strong>&nbsp;An ecclesiastical endorsement is required at the end of Pathway for those students who choose to continue to the BYU-Idaho Online Degree Program.</div></div>
 				</div>
-				<a href="service_missionaries.html" class="previous turquoise">&lt;&lt; Service Missionaries</a>
-				<a href="cost.html" class="next turquoise">Cost &gt;&gt;</a>	
+				<a href="/working-build/pages/what_is_pathway/l_version/service_missionaries.html" class="previous turquoise">&lt;&lt; Service Missionaries</a>
+				<a href="/working-build/pages/what_is_pathway/l_version/cost.html" class="next turquoise">Cost &gt;&gt;</a>	
 			</div>
 		</div>
 		<!-- Sidebar Start -->
 <div class="col-xs-6 col-sm-4 pull-right" id="sidebar" role="navigation">
 	<div class="pf-sidebar" id="sideNav" role="complementary">
 		<div class="sidebar-caret   pos2  "></div>
-		<h3><a  href="../s_version/HPW.html"><img src="../../../img/wip/icons/standard.png" alt="Standard Logo" width="51" height="52"> Standard</a></h3>
+		<h3><a  href="../s_version/HPW.html"><img src="/working-build/img/wip/icons/standard.png" alt="Standard Logo" width="51" height="52"> Standard</a></h3>
 		
-		<h3><a class="active" href="../l_version/HPW.html"><img src="../../../img/wip/icons/lversion.png" alt="L Version Logo"> L Version</a></h3>
+		<h3><a class="active" href="/working-build/pages/what_is_pathway/l_version/HPW.html"><img src="../../../img/wip/icons/lversion.png" alt="L Version Logo"> L Version</a></h3>
 		
 		<ul class="nav turquoise pf-sidenav">
-			<li  ><a href="HPW.html"><span class="caret down"></span>How Pathway Works</a>
+			<li  ><a href="/working-build/pages/what_is_pathway/l_version/HPW.html"><span class="caret down"></span>How Pathway Works</a>
 				<ul class="nav drop-down">
 					<li><a href="#OnlineAcademicCourses">Online Academic Courses</a></li>
 					<li><a href="#ReligionClasses">Religion Courses</a></li>
 					<li><a href="#WeeklyGathering">Weekly Gathering</a></li>
 				</ul>
 			</li>
-			<li  ><a href="speaking_partners.html"><span class="caret"></span>Speaking Partners</a></li>
-			<li  ><a href="service_missionaries.html"><span class="caret"></span>Service Missionaries</a></li>
-			<li class="active" ><a href="admission.html"><span class="caret"></span>Admission Requirements</a></li>
-			<li  ><a href="cost.html"><span class="caret down"></span>Cost</a>
+			<li  ><a href="/working-build/pages/what_is_pathway/l_version/speaking_partners.html"><span class="caret"></span>Speaking Partners</a></li>
+			<li  ><a href="/working-build/pages/what_is_pathway/l_version/service_missionaries.html"><span class="caret"></span>Service Missionaries</a></li>
+			<li class="active" ><a href="/working-build/pages/what_is_pathway/l_version/admission.html"><span class="caret"></span>Admission Requirements</a></li>
+			<li  ><a href="/working-build/pages/what_is_pathway/l_version/cost.html"><span class="caret down"></span>Cost</a>
 				<ul class="nav">
-					<li><a href="cost_calc_tuition.html">Calculate Tuition</a></li>
-					<li><a href="cost.html#FinancialAid">Financial Aid</a></li>
+					<li><a href="/working-build/pages/what_is_pathway/l_version/cost_calc_tuition.html">Calculate Tuition</a></li>
+					<li><a href="/working-build/pages/what_is_pathway/l_version/cost.html#FinancialAid">Financial Aid</a></li>
 				</ul>
 			</li>
-			<li  ><a href="degree.html"><span class="caret down"></span>Degree Options</a>
+			<li  ><a href="/working-build/pages/what_is_pathway/l_version/degree.html"><span class="caret down"></span>Degree Options</a>
 				<ul class="nav">
 					<li><a href="#OnlineDegree">Online Degree Program</a></li>
 					<li><a href="#Campus">Campus</a></li>
 					<li><a href="#OtherUniversities">Other Universities</a></li>
 				</ul>
 			</li>
-			<li  ><a href="course_descriptions.html"><span class="caret down"></span>Course Descriptions</a></li>
+			<li  ><a href="/working-build/pages/what_is_pathway/l_version/course_descriptions.html"><span class="caret down"></span>Course Descriptions</a></li>
 		</ul>
 		
-		<h3><a href="../../pathway-faq.html"><img alt="FAQ icon" src="../../../img/faq/faqbubble_large.png"> FAQ</a></h3>
+		<h3><a href="/working-build/pages/pathway-faq.html"><img alt="FAQ icon" src="/working-build/img/faq/faqbubble_large.png"> FAQ</a></h3>
 		<br>
-		<a href="https://pathway.lds.org/Finder/World"><img style="max-width:248px;" class="hidden-sm img-responsive" src="../../../img/admission/ApplyButton_Lversion.png"><img style="max-width:175px;" class="visible-sm img-responsive" src="../../../img/admission/ApplyButton_Lversion.png"></a>
+		<a href="https://pathway.lds.org/Finder/World"><img style="max-width:248px;" class="hidden-sm img-responsive" src="/working-build/img/admission/ApplyButton_Lversion.png"><img style="max-width:175px;" class="visible-sm img-responsive" src="/working-build/img/admission/ApplyButton_Lversion.png"></a>
 		
 	</div>
 </div>
@@ -203,15 +203,15 @@
     <div class="footer-links navbar">
       <ul class="nav navbar-nav">
         <li class="social-container"> 
-          <a class="social-icon" href="https://www.facebook.com/BYUIdahoPathway"><img src="/img/social-icons/facebook.png" width="27" height="27"></a> 
-          <a class="social-icon" href="http://www.pinterest.com/byuipop/pathway-online-programs/"><img src="/img/social-icons/pinterest.png" width="27" height="27"></a>
+          <a class="social-icon" href="https://www.facebook.com/BYUIdahoPathway"><img src="/working-build/img/social-icons/facebook.png" width="27" height="27"></a> 
+          <a class="social-icon" href="http://www.pinterest.com/byuipop/pathway-online-programs/"><img src="/working-build/img/social-icons/pinterest.png" width="27" height="27"></a>
           <br class="hidden-xs"> 
-          <a class="social-icon" href="https://twitter.com/BYUIdahoPathway"><img src="/img/social-icons/twitter.png" width="27" height="27"></a> 
-          <a class="social-icon" href="http://instagram.com/Pathway_BYUIdaho"><img src="/img/social-icons/instagram.png" width="27" height="27"></a>
+          <a class="social-icon" href="https://twitter.com/BYUIdahoPathway"><img src="/working-build/img/social-icons/twitter.png" width="27" height="27"></a> 
+          <a class="social-icon" href="http://instagram.com/Pathway_BYUIdaho"><img src="/working-build/img/social-icons/instagram.png" width="27" height="27"></a>
         </li>
         <li class="footer-link hidden-xs"> <a href="http://www.byui.edu/pathway/news-index">Newsroom</a> </li>
-        <li class="footer-link hidden-xs"> <a href="/pages/about-us.html">About Us</a> </li>
-        <li class="footer-link hidden-xs"> <a href="/pages/pathway-faq.html"><img class="faq-bubble" src="/img/faqbubble_small.png" width="16" height="16">FAQ</a> </li>
+        <li class="footer-link hidden-xs"> <a href="/working-build/pages/about-us.html">About Us</a> </li>
+        <li class="footer-link hidden-xs"> <a href="/working-build/pages/pathway-faq.html"><img class="faq-bubble" src="/working-build/img/faqbubble_small.png" width="16" height="16">FAQ</a> </li>
         <li class="footer-link hidden-xs"> <a href="http://www.byui.edu/pathway/videos">Media</a>  </li>
         <li class="footer-link hidden-xs"> <a target="_blank" href="http://www.ldsphilanthropies.org/byu-idaho/funds/byuidaho-pathway.html">Donate</a> </li>
         <li class="footer-link hidden-xs"> <a target="_blank" href="https://byui.az1.qualtrics.com/SE/?SID=SV_3mwtzS9u0NgVnQV">Visit a Location</a> </li>
@@ -222,10 +222,10 @@
 
 <!-- Jquery and Bootstrap JS -->
 <script src="//code.jquery.com/jquery-1.10.2.min.js"></script> 
-<script src="/dist/js/bootstrap.min.js"></script>
+<script src="/working-build/dist/js/bootstrap.min.js"></script>
 
 
-<script src="/js/drawer.js"></script> 
+<script src="/working-build/js/drawer.js"></script> 
 
 
 
