--- a/pages/what_is_pathway/s_version/HPW.html
+++ b/pages/what_is_pathway/s_version/HPW.html
@@ -26,10 +26,10 @@
 	<meta name="msapplication-TileImage" content="favicon/mstile-144x144.png" />
 
 	<!-- Bootstrap core CSS -->
-	<link href="/dist/css/bootstrap.min.css" rel="stylesheet">
+	<link href="/working-build/dist/css/bootstrap.min.css" rel="stylesheet">
 
 	<!-- Custom styles for this page -->
-	<link href="/styles/what_is_pathway.css" rel="stylesheet">
+	<link href="/working-build/styles/what_is_pathway.css" rel="stylesheet">
 </head>
 
 <body>
@@ -38,12 +38,12 @@
   <div class="container">
     <ul class="nav orange-bar">
       <li class="header-column visible-xs pull-left">&nbsp;</li>
-      <li class="header-column pull-left"> <a id="pathway-logo" class="navbar-brand img-responsive hidden-xs" href="/"></a> <a id="pathway-mobile-logo" class="center-block navbar-brand visible-xs" href="index.htm"></a></li>
-      <li class="header-column pull-right"> <a class="header_contact hidden-xs pull-left" href="pages/advising-and-support.html">Contact Us <img src="/img/speechbubble.png" width="13" height="11" alt="speech"></a>
+      <li class="header-column pull-left"> <a id="pathway-logo" class="navbar-brand img-responsive hidden-xs" href="/working-build/"></a> <a id="pathway-mobile-logo" class="center-block navbar-brand visible-xs" href="index.htm"></a></li>
+      <li class="header-column pull-right"> <a class="header_contact hidden-xs pull-left" href="/working-build/pages/advising-and-support.html">Contact Us <img src="/working-build/img/speechbubble.png" width="13" height="11" alt="speech"></a>
        <form class="navbar-right pull-right ng-pristine ng-valid">
         <!-- Sign-in / User button -->
         <div class="btn-group">
-          <a class="btn signin-btn" style="text-decoration: none;text-transform: none;" href="/Home/ReturnHome"><span class="hidden-xs">Patty Pathway</span><img class="visible-xs" src="/img/usernameman.png" style="padding:0 10px; height:20px;"></a>
+          <a class="btn signin-btn" style="text-decoration: none;text-transform: none;" href="/working-build/"><span class="hidden-xs">Patty Pathway</span><img class="visible-xs" src="/working-build/img/usernameman.png" style="padding:0 10px; height:20px;"></a>
           <button type="button" class="btn signin-btn dropdown-toggle" data-toggle="dropdown">
             <span class="caret"></span>
             <span class="sr-only">Dropdown</span>
@@ -71,11 +71,11 @@
     </div>
     <nav id="siteNavigation" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
-        <li class="nav-1 "><a href="/pages/testimonials/testimonials.html">Testimonials</a></li>
-        <li class="nav-2 nav_active"><a href="/pages/what_is_pathway/what_is_pathway.html">What Is Pathway</a></li>
+        <li class="nav-1 "><a href="/working-build/pages/testimonials/testimonials.html">Testimonials</a></li>
+        <li class="nav-2 nav_active"><a href="/working-build/pages/what_is_pathway/what_is_pathway.html">What Is Pathway</a></li>
         <li class="nav-3 "><a href="#join">Join Pathway</a></li>
-        <li class="nav-4 "><a href="/pages/speaking_partners/what-is-speaking-partners.html">Speaking Partners</a></li>
-        <li class="nav-5 "><a href="/pages/local_leaders/using-pathway.html">Local Leaders</a></li>
+        <li class="nav-4 "><a href="/working-build/pages/speaking_partners/what-is-speaking-partners.html">Speaking Partners</a></li>
+        <li class="nav-5 "><a href="/working-build/pages/local_leaders/using-pathway.html">Local Leaders</a></li>
       </ul>
     </nav>
   </div>
@@ -88,8 +88,8 @@
     <div class="container">
         <div id="breadCrumb" class="breadCrumb module">
             <ul>
-                <li class="first"><a href="/">Home</a></li>
-                <li><a href="/pages/what_is_pathway/what_is_pathway.html">What Is Pathway</a></li>
+                <li class="first"><a href="/working-build/">Home</a></li>
+                <li><a href="/working-build/pages/what_is_pathway/what_is_pathway.html">What Is Pathway</a></li>
                 <li class="pipe-divider">standard Version</li>
                 
                 <li class="last lowercase">How Pathway Works</li>
@@ -107,20 +107,20 @@
   <div class="row row-offcanvas row-offcanvas-right">
     <div class="col-xs-12 col-sm-8 main-content">
       <button type="button" onClick="open_side();" class="navbar-toggle sidebar-btn collapsed"> 
-        <img id="arrow-icon" src="../../../img/arrow.png" width="14" height="14" alt="arrow"> 
+        <img id="arrow-icon" src="/working-build/img/arrow.png" width="14" height="14" alt="arrow"> 
       </button>
-      <div class="hero pf-page-header"> <img src="../../../img/wip/icons/standard.png" alt="standardLogo">
+      <div class="hero pf-page-header"> <img src="/working-build/img/wip/icons/standard.png" alt="standardLogo">
         <h1 id="Standard" class="page-title">Standard Version</h1>
         <p class="page-summary">For students who are proficient in English</p>
       </div>
       <div class="pf-section">
-        <div class="pf-page-header"> <img src="../../../img/wip/icons/gear.png" width="45" height="46" alt="gear">
+        <div class="pf-page-header"> <img src="/working-build/img/wip/icons/gear.png" width="45" height="46" alt="gear">
           <h2 id="HowPathwayWorks" class="subheading">How Pathway Works</h2>
         </div>
         <h3 id="OnlineAcademicCourses" class="p-heading red">Online Academic Courses</h3>
         <p>During each of the three semesters, students take one online academic class from BYU-Idaho as well as one religion class. The three academic classes are designed to give students the confidence and skills needed to succeed in college and include Pathway Life Skills (GS 120), Basic Writing (ENG 106), and Personal Finance (Math 100G). </p>
         
-        <img class="center-block img-responsive img-space" src="../../../img/hpw/pathway_course_sequence.png" alt="pathway course sequence" width="100%">
+        <img class="center-block img-responsive img-space" src="/working-build/img/hpw/pathway_course_sequence.png" alt="pathway course sequence" width="100%">
         <h3 id="ReligionClasses" class="p-heading red">Religion Courses</h3>
         <p>During each of the three semesters, students take one of the following religion classes:</p>
         <ul>
@@ -129,12 +129,12 @@
           <li> Teachings of the Living Prophets – FDREL 333 </li>
         </ul>
         <p>All Pathway students in the standard version take the same academic and religion courses, but the schedule and method vary by <a href="#AgeGroups">age group</a>.</p>
-        <img class="center-block img-responsive img-space" src="../../../img/hpw/religion.png" alt="students working on a project together" width="100%">
+        <img class="center-block img-responsive img-space" src="/working-build/img/hpw/religion.png" alt="students working on a project together" width="100%">
         <h3 id="WeeklyGathering" class="p-heading red">Weekly Gathering</h3>
         <p>The program includes a 1-hour gathering each week at a local institute facility or church meetinghouse with other Pathway students and a service missionary couple. </p>
-        <img class="center-block img-responsive img-space" src="../../../img/hpw/weeklygatheringgraphic.png" alt="weekly calendar" width="100%">
+        <img class="center-block img-responsive img-space" src="/working-build/img/hpw/weeklygatheringgraphic.png" alt="weekly calendar" width="100%">
         <p>The gathering provides social, emotional, and academic support and is held every Thursday evening during the three BYU-Idaho academic semesters. </p>
-        <img class="center-block img-responsive img-space" src="../../../img/hpw/semester_schedule.png" alt="semester track" width="100%">
+        <img class="center-block img-responsive img-space" src="/working-build/img/hpw/semester_schedule.png" alt="semester track" width="100%">
         <h3 id="AgeGroups" class="p-heading red">Age Groups</h3>
         <p>Pathway students are divided into group types: Age 18-30, Age 31+, and Age 18+. (The Age 18+ group is no longer available in the United States except for a few existing sites. Most international sites continue to approve and operate Age 18+ groups.)</p>
         <h4 class="p-heading2 red">Academic Courses</h4>
@@ -143,17 +143,17 @@
         <p>Students in the Age 18-30 and Age 18+ groups complete their Book of Mormon courses through their local institute program at no charge, and the credits are then eligible for transfer to BYU-Idaho.</p>
         <p>Students in the Age 31+ group complete their Book of Mormon courses online through BYU-Idaho.</p>
         <p>All groups complete the FDREL 333, “Teachings of the Living Prophets,” course online through BYU-Idaho.</p>
-        <p><a href="service_missionaries.html" class="next red">Service Missionaries >> </a></p>
+        <p><a href="/working-build/pages/what_is_pathway/l_version/service_missionaries.html" class="next red">Service Missionaries >> </a></p>
       </div>
     </div>
     <!-- Sidebar Start -->
 <div class="col-xs-6 col-sm-4 pull-right" id="sidebar" role="navigation">
 	<div class="pf-sidebar" id="sideNav" role="complementary">
 		<div class="sidebar-caret  pos1   "></div>
-		<h3><a  class="active"  href="../s_version/HPW.html"><img src="../../../img/wip/icons/standard.png" alt="Standard Logo" width="51" height="52"> Standard</a></h3>
+		<h3><a  class="active"  href="../s_version/HPW.html"><img src="/working-build/img/wip/icons/standard.png" alt="Standard Logo" width="51" height="52"> Standard</a></h3>
 		
 		<ul class="nav red pf-sidenav">
-			<li  class="active"  ><a href="HPW.html"><span class="caret down"></span>How Pathway Works</a>
+			<li  class="active"  ><a href="/working-build/pages/what_is_pathway/s_version/HPW.html"><span class="caret down"></span>How Pathway Works</a>
 				<ul class="nav drop-down">
 					<li><a href="#OnlineAcademicCourses">Online Academic Courses</a></li>
 					<li><a href="#ReligionClasses">Religion Courses</a></li>
@@ -161,30 +161,30 @@
 					<li><a href="#AgeGroups">Age Groups</a></li>
 				</ul>
 			</li>
-			<li  ><a href="service_missionaries.html"><span class="caret"></span>Service Missionaries</a></li>
-			<li  ><a href="admission.html"><span class="caret"></span>Admission Requirements</a></li>
-			<li  ><a href="cost.html"><span class="caret down"></span>Cost</a>
+			<li  ><a href="/working-build/pages/what_is_pathway/s_version/service_missionaries.html"><span class="caret"></span>Service Missionaries</a></li>
+			<li  ><a href="/working-build/pages/what_is_pathway/s_version/admission.html"><span class="caret"></span>Admission Requirements</a></li>
+			<li  ><a href="/working-build/pages/what_is_pathway/s_version/cost.html"><span class="caret down"></span>Cost</a>
 				<ul class="nav">
-					<li><a href="cost_calc_tuition.html">Calculate Tuition</a></li>
-					<li><a href="cost.html#FinancialAid">Financial Aid</a></li>
+					<li><a href="/working-build/pages/what_is_pathway/s_version/cost_calc_tuition.html">Calculate Tuition</a></li>
+					<li><a href="/working-build/pages/what_is_pathway/s_version/cost.html#FinancialAid">Financial Aid</a></li>
 				</ul>
 			</li>
-			<li  ><a href="degree.html"><span class="caret down"></span>Degree Options</a>
+			<li  ><a href="/working-build/pages/what_is_pathway/s_version/degree.html"><span class="caret down"></span>Degree Options</a>
 				<ul class="nav">
 					<li><a href="#OnlineDegree">Online Degree Program</a></li>
 					<li><a href="#Campus">Campus</a></li>
 					<li><a href="#OtherUniversities">Other Universities</a></li>
 				</ul>
 			</li>
-			<li  ><a href="course_descriptions.html"><span class="caret down"></span>Course Descriptions</a></li>
+			<li  ><a href="/working-build/pages/what_is_pathway/s_version/course_descriptions.html"><span class="caret down"></span>Course Descriptions</a></li>
 		</ul>
 		
-		<h3><a  href="../l_version/HPW.html"><img src="../../../img/wip/icons/lversion.png" alt="L Version Logo"> L Version</a></h3>
+		<h3><a  href="/working-build/pages/what_is_pathway/l_version/HPW.html"><img src="../../../img/wip/icons/lversion.png" alt="L Version Logo"> L Version</a></h3>
 		
-		<h3><a href="../../pathway-faq.html"><img alt="FAQ icon" src="../../../img/faq/faqbubble_large.png"> FAQ</a></h3>
+		<h3><a href="/working-build/pages/pathway-faq.html"><img alt="FAQ icon" src="/working-build/img/faq/faqbubble_large.png"> FAQ</a></h3>
 		<br>
 		
-		<a href="https://pathway.lds.org/Finder/World"><img style="max-width:248px;" class="hidden-sm img-responsive" src="../../../img/admission/ApplyButton_Standard.png"><img style="max-width:175px;" class="visible-sm img-responsive" src="../../../img/admission/ApplyButton_Standard.png"></a>
+		<a href="https://pathway.lds.org/Finder/World"><img style="max-width:248px;" class="hidden-sm img-responsive" src="/working-build/img/admission/ApplyButton_Standard.png"><img style="max-width:175px;" class="visible-sm img-responsive" src="/working-build/img/admission/ApplyButton_Standard.png"></a>
 	</div>
 </div>
 <!-- End Sidebar -->
@@ -197,15 +197,15 @@
     <div class="footer-links navbar">
       <ul class="nav navbar-nav">
         <li class="social-container"> 
-          <a class="social-icon" href="https://www.facebook.com/BYUIdahoPathway"><img src="/img/social-icons/facebook.png" width="27" height="27"></a> 
-          <a class="social-icon" href="http://www.pinterest.com/byuipop/pathway-online-programs/"><img src="/img/social-icons/pinterest.png" width="27" height="27"></a>
+          <a class="social-icon" href="https://www.facebook.com/BYUIdahoPathway"><img src="/working-build/img/social-icons/facebook.png" width="27" height="27"></a> 
+          <a class="social-icon" href="http://www.pinterest.com/byuipop/pathway-online-programs/"><img src="/working-build/img/social-icons/pinterest.png" width="27" height="27"></a>
           <br class="hidden-xs"> 
-          <a class="social-icon" href="https://twitter.com/BYUIdahoPathway"><img src="/img/social-icons/twitter.png" width="27" height="27"></a> 
-          <a class="social-icon" href="http://instagram.com/Pathway_BYUIdaho"><img src="/img/social-icons/instagram.png" width="27" height="27"></a>
+          <a class="social-icon" href="https://twitter.com/BYUIdahoPathway"><img src="/working-build/img/social-icons/twitter.png" width="27" height="27"></a> 
+          <a class="social-icon" href="http://instagram.com/Pathway_BYUIdaho"><img src="/working-build/img/social-icons/instagram.png" width="27" height="27"></a>
         </li>
         <li class="footer-link hidden-xs"> <a href="http://www.byui.edu/pathway/news-index">Newsroom</a> </li>
-        <li class="footer-link hidden-xs"> <a href="/pages/about-us.html">About Us</a> </li>
-        <li class="footer-link hidden-xs"> <a href="/pages/pathway-faq.html"><img class="faq-bubble" src="/img/faqbubble_small.png" width="16" height="16">FAQ</a> </li>
+        <li class="footer-link hidden-xs"> <a href="/working-build/pages/about-us.html">About Us</a> </li>
+        <li class="footer-link hidden-xs"> <a href="/working-build/pages/pathway-faq.html"><img class="faq-bubble" src="/working-build/img/faqbubble_small.png" width="16" height="16">FAQ</a> </li>
         <li class="footer-link hidden-xs"> <a href="http://www.byui.edu/pathway/videos">Media</a>  </li>
         <li class="footer-link hidden-xs"> <a target="_blank" href="http://www.ldsphilanthropies.org/byu-idaho/funds/byuidaho-pathway.html">Donate</a> </li>
         <li class="footer-link hidden-xs"> <a target="_blank" href="https://byui.az1.qualtrics.com/SE/?SID=SV_3mwtzS9u0NgVnQV">Visit a Location</a> </li>
@@ -216,10 +216,10 @@
 
 <!-- Jquery and Bootstrap JS -->
 <script src="//code.jquery.com/jquery-1.10.2.min.js"></script> 
-<script src="/dist/js/bootstrap.min.js"></script>
+<script src="/working-build/dist/js/bootstrap.min.js"></script>
 
 
-<script src="/js/drawer.js"></script> 
+<script src="/working-build/js/drawer.js"></script> 
 
 
 
