--- a/pages/what_is_pathway/s_version/course_descriptions.html
+++ b/pages/what_is_pathway/s_version/course_descriptions.html
@@ -26,10 +26,10 @@
 	<meta name="msapplication-TileImage" content="favicon/mstile-144x144.png" />
 
 	<!-- Bootstrap core CSS -->
-	<link href="/dist/css/bootstrap.min.css" rel="stylesheet">
+	<link href="/working-build/dist/css/bootstrap.min.css" rel="stylesheet">
 
 	<!-- Custom styles for this page -->
-	<link href="/styles/what_is_pathway.css" rel="stylesheet">
+	<link href="/working-build/styles/what_is_pathway.css" rel="stylesheet">
 </head>
 
 <body>
@@ -38,12 +38,12 @@
   <div class="container">
     <ul class="nav orange-bar">
       <li class="header-column visible-xs pull-left">&nbsp;</li>
-      <li class="header-column pull-left"> <a id="pathway-logo" class="navbar-brand img-responsive hidden-xs" href="/"></a> <a id="pathway-mobile-logo" class="center-block navbar-brand visible-xs" href="index.htm"></a></li>
-      <li class="header-column pull-right"> <a class="header_contact hidden-xs pull-left" href="pages/advising-and-support.html">Contact Us <img src="/img/speechbubble.png" width="13" height="11" alt="speech"></a>
+      <li class="header-column pull-left"> <a id="pathway-logo" class="navbar-brand img-responsive hidden-xs" href="/working-build/"></a> <a id="pathway-mobile-logo" class="center-block navbar-brand visible-xs" href="index.htm"></a></li>
+      <li class="header-column pull-right"> <a class="header_contact hidden-xs pull-left" href="/working-build/pages/advising-and-support.html">Contact Us <img src="/working-build/img/speechbubble.png" width="13" height="11" alt="speech"></a>
        <form class="navbar-right pull-right ng-pristine ng-valid">
         <!-- Sign-in / User button -->
         <div class="btn-group">
-          <a class="btn signin-btn" style="text-decoration: none;text-transform: none;" href="/Home/ReturnHome"><span class="hidden-xs">Patty Pathway</span><img class="visible-xs" src="/img/usernameman.png" style="padding:0 10px; height:20px;"></a>
+          <a class="btn signin-btn" style="text-decoration: none;text-transform: none;" href="/working-build/"><span class="hidden-xs">Patty Pathway</span><img class="visible-xs" src="/working-build/img/usernameman.png" style="padding:0 10px; height:20px;"></a>
           <button type="button" class="btn signin-btn dropdown-toggle" data-toggle="dropdown">
             <span class="caret"></span>
             <span class="sr-only">Dropdown</span>
@@ -71,11 +71,11 @@
     </div>
     <nav id="siteNavigation" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
-        <li class="nav-1 "><a href="/pages/testimonials/testimonials.html">Testimonials</a></li>
-        <li class="nav-2 nav_active"><a href="/pages/what_is_pathway/what_is_pathway.html">What Is Pathway</a></li>
+        <li class="nav-1 "><a href="/working-build/pages/testimonials/testimonials.html">Testimonials</a></li>
+        <li class="nav-2 nav_active"><a href="/working-build/pages/what_is_pathway/what_is_pathway.html">What Is Pathway</a></li>
         <li class="nav-3 "><a href="#join">Join Pathway</a></li>
-        <li class="nav-4 "><a href="/pages/speaking_partners/what-is-speaking-partners.html">Speaking Partners</a></li>
-        <li class="nav-5 "><a href="/pages/local_leaders/using-pathway.html">Local Leaders</a></li>
+        <li class="nav-4 "><a href="/working-build/pages/speaking_partners/what-is-speaking-partners.html">Speaking Partners</a></li>
+        <li class="nav-5 "><a href="/working-build/pages/local_leaders/using-pathway.html">Local Leaders</a></li>
       </ul>
     </nav>
   </div>
@@ -88,8 +88,8 @@
     <div class="container">
         <div id="breadCrumb" class="breadCrumb module">
             <ul>
-                <li class="first"><a href="/">Home</a></li>
-                <li><a href="/pages/what_is_pathway/what_is_pathway.html">What Is Pathway</a></li>
+                <li class="first"><a href="/working-build/">Home</a></li>
+                <li><a href="/working-build/pages/what_is_pathway/what_is_pathway.html">What Is Pathway</a></li>
                 <li class="pipe-divider">standard Version</li>
                 
                 <li class="last lowercase">Course Descriptions</li>
@@ -194,10 +194,10 @@
 <div class="col-xs-6 col-sm-4 pull-right" id="sidebar" role="navigation">
 	<div class="pf-sidebar" id="sideNav" role="complementary">
 		<div class="sidebar-caret  pos1   "></div>
-		<h3><a  class="active"  href="../s_version/HPW.html"><img src="../../../img/wip/icons/standard.png" alt="Standard Logo" width="51" height="52"> Standard</a></h3>
+		<h3><a  class="active"  href="../s_version/HPW.html"><img src="/working-build/img/wip/icons/standard.png" alt="Standard Logo" width="51" height="52"> Standard</a></h3>
 		
 		<ul class="nav red pf-sidenav">
-			<li  ><a href="HPW.html"><span class="caret down"></span>How Pathway Works</a>
+			<li  ><a href="/working-build/pages/what_is_pathway/s_version/HPW.html"><span class="caret down"></span>How Pathway Works</a>
 				<ul class="nav drop-down">
 					<li><a href="#OnlineAcademicCourses">Online Academic Courses</a></li>
 					<li><a href="#ReligionClasses">Religion Courses</a></li>
@@ -205,30 +205,30 @@
 					<li><a href="#AgeGroups">Age Groups</a></li>
 				</ul>
 			</li>
-			<li  ><a href="service_missionaries.html"><span class="caret"></span>Service Missionaries</a></li>
-			<li  ><a href="admission.html"><span class="caret"></span>Admission Requirements</a></li>
-			<li  ><a href="cost.html"><span class="caret down"></span>Cost</a>
+			<li  ><a href="/working-build/pages/what_is_pathway/s_version/service_missionaries.html"><span class="caret"></span>Service Missionaries</a></li>
+			<li  ><a href="/working-build/pages/what_is_pathway/s_version/admission.html"><span class="caret"></span>Admission Requirements</a></li>
+			<li  ><a href="/working-build/pages/what_is_pathway/s_version/cost.html"><span class="caret down"></span>Cost</a>
 				<ul class="nav">
-					<li><a href="cost_calc_tuition.html">Calculate Tuition</a></li>
-					<li><a href="cost.html#FinancialAid">Financial Aid</a></li>
+					<li><a href="/working-build/pages/what_is_pathway/s_version/cost_calc_tuition.html">Calculate Tuition</a></li>
+					<li><a href="/working-build/pages/what_is_pathway/s_version/cost.html#FinancialAid">Financial Aid</a></li>
 				</ul>
 			</li>
-			<li  ><a href="degree.html"><span class="caret down"></span>Degree Options</a>
+			<li  ><a href="/working-build/pages/what_is_pathway/s_version/degree.html"><span class="caret down"></span>Degree Options</a>
 				<ul class="nav">
 					<li><a href="#OnlineDegree">Online Degree Program</a></li>
 					<li><a href="#Campus">Campus</a></li>
 					<li><a href="#OtherUniversities">Other Universities</a></li>
 				</ul>
 			</li>
-			<li class="active" ><a href="course_descriptions.html"><span class="caret down"></span>Course Descriptions</a></li>
+			<li class="active" ><a href="/working-build/pages/what_is_pathway/s_version/course_descriptions.html"><span class="caret down"></span>Course Descriptions</a></li>
 		</ul>
 		
-		<h3><a  href="../l_version/HPW.html"><img src="../../../img/wip/icons/lversion.png" alt="L Version Logo"> L Version</a></h3>
+		<h3><a  href="/working-build/pages/what_is_pathway/l_version/HPW.html"><img src="../../../img/wip/icons/lversion.png" alt="L Version Logo"> L Version</a></h3>
 		
-		<h3><a href="../../pathway-faq.html"><img alt="FAQ icon" src="../../../img/faq/faqbubble_large.png"> FAQ</a></h3>
+		<h3><a href="/working-build/pages/pathway-faq.html"><img alt="FAQ icon" src="/working-build/img/faq/faqbubble_large.png"> FAQ</a></h3>
 		<br>
 		
-		<a href="https://pathway.lds.org/Finder/World"><img style="max-width:248px;" class="hidden-sm img-responsive" src="../../../img/admission/ApplyButton_Standard.png"><img style="max-width:175px;" class="visible-sm img-responsive" src="../../../img/admission/ApplyButton_Standard.png"></a>
+		<a href="https://pathway.lds.org/Finder/World"><img style="max-width:248px;" class="hidden-sm img-responsive" src="/working-build/img/admission/ApplyButton_Standard.png"><img style="max-width:175px;" class="visible-sm img-responsive" src="/working-build/img/admission/ApplyButton_Standard.png"></a>
 	</div>
 </div>
 <!-- End Sidebar -->
@@ -240,15 +240,15 @@
     <div class="footer-links navbar">
       <ul class="nav navbar-nav">
         <li class="social-container"> 
-          <a class="social-icon" href="https://www.facebook.com/BYUIdahoPathway"><img src="/img/social-icons/facebook.png" width="27" height="27"></a> 
-          <a class="social-icon" href="http://www.pinterest.com/byuipop/pathway-online-programs/"><img src="/img/social-icons/pinterest.png" width="27" height="27"></a>
+          <a class="social-icon" href="https://www.facebook.com/BYUIdahoPathway"><img src="/working-build/img/social-icons/facebook.png" width="27" height="27"></a> 
+          <a class="social-icon" href="http://www.pinterest.com/byuipop/pathway-online-programs/"><img src="/working-build/img/social-icons/pinterest.png" width="27" height="27"></a>
           <br class="hidden-xs"> 
-          <a class="social-icon" href="https://twitter.com/BYUIdahoPathway"><img src="/img/social-icons/twitter.png" width="27" height="27"></a> 
-          <a class="social-icon" href="http://instagram.com/Pathway_BYUIdaho"><img src="/img/social-icons/instagram.png" width="27" height="27"></a>
+          <a class="social-icon" href="https://twitter.com/BYUIdahoPathway"><img src="/working-build/img/social-icons/twitter.png" width="27" height="27"></a> 
+          <a class="social-icon" href="http://instagram.com/Pathway_BYUIdaho"><img src="/working-build/img/social-icons/instagram.png" width="27" height="27"></a>
         </li>
         <li class="footer-link hidden-xs"> <a href="http://www.byui.edu/pathway/news-index">Newsroom</a> </li>
-        <li class="footer-link hidden-xs"> <a href="/pages/about-us.html">About Us</a> </li>
-        <li class="footer-link hidden-xs"> <a href="/pages/pathway-faq.html"><img class="faq-bubble" src="/img/faqbubble_small.png" width="16" height="16">FAQ</a> </li>
+        <li class="footer-link hidden-xs"> <a href="/working-build/pages/about-us.html">About Us</a> </li>
+        <li class="footer-link hidden-xs"> <a href="/working-build/pages/pathway-faq.html"><img class="faq-bubble" src="/working-build/img/faqbubble_small.png" width="16" height="16">FAQ</a> </li>
         <li class="footer-link hidden-xs"> <a href="http://www.byui.edu/pathway/videos">Media</a>  </li>
         <li class="footer-link hidden-xs"> <a target="_blank" href="http://www.ldsphilanthropies.org/byu-idaho/funds/byuidaho-pathway.html">Donate</a> </li>
         <li class="footer-link hidden-xs"> <a target="_blank" href="https://byui.az1.qualtrics.com/SE/?SID=SV_3mwtzS9u0NgVnQV">Visit a Location</a> </li>
@@ -259,10 +259,10 @@
 
 <!-- Jquery and Bootstrap JS -->
 <script src="//code.jquery.com/jquery-1.10.2.min.js"></script> 
-<script src="/dist/js/bootstrap.min.js"></script>
+<script src="/working-build/dist/js/bootstrap.min.js"></script>
 
 
-<script src="/js/drawer.js"></script> 
+<script src="/working-build/js/drawer.js"></script> 
 
 
 
