build: finishing jekyll upgrade

--- a/pages/what_is_pathway/s_version/service_missionaries.html
+++ b/pages/what_is_pathway/s_version/service_missionaries.html
@@ -1,37 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="">
 	<meta name="author" content="">
-	<link rel="shortcut icon" href="../../docs-assets/ico/favicon.png">
 	<title>Pathway - Service Missionaries</title>
-	<link rel="apple-touch-icon" sizes="57x57" href="favicon/apple-touch-icon-57x57.png" />
-	<link rel="apple-touch-icon" sizes="114x114" href="favicon/apple-touch-icon-114x114.png" />
-	<link rel="apple-touch-icon" sizes="72x72" href="favicon/apple-touch-icon-72x72.png" />
-	<link rel="apple-touch-icon" sizes="144x144" href="favicon/apple-touch-icon-144x144.png" />
-	<link rel="apple-touch-icon" sizes="60x60" href="favicon/apple-touch-icon-60x60.png" />
-	<link rel="apple-touch-icon" sizes="120x120" href="favicon/apple-touch-icon-120x120.png" />
-	<link rel="apple-touch-icon" sizes="76x76" href="favicon/apple-touch-icon-76x76.png" />
-	<link rel="apple-touch-icon" sizes="152x152" href="favicon/apple-touch-icon-152x152.png" />
-	<link rel="icon" type="image/png" href="favicon/favicon-196x196.png" sizes="196x196" />
-	<link rel="icon" type="image/png" href="favicon/favicon-160x160.png" sizes="160x160" />
-	<link rel="icon" type="image/png" href="favicon/favicon-96x96.png" sizes="96x96" />
-	<link rel="icon" type="image/png" href="favicon/favicon-32x32.png" sizes="32x32" />
-	<link rel="icon" type="image/png" href="favicon/favicon-16x16.png" sizes="16x16" />
-	<meta name="msapplication-TileColor" content="#f3a91e" />
-	<meta name="msapplication-TileImage" content="favicon/mstile-144x144.png" />
+	
+	<!-- Browser Icons -->
+	<link rel="shortcut icon" href="/working-build/docs-assets/ico/favicon.png">
+	<link rel="apple-touch-icon" sizes="57x57" href="/working-build/favicon/apple-touch-icon-57x57.png" />
+	<link rel="apple-touch-icon" sizes="114x114" href="/working-build/favicon/apple-touch-icon-114x114.png" />
+	<link rel="apple-touch-icon" sizes="72x72" href="/working-build/favicon/apple-touch-icon-72x72.png" />
+	<link rel="apple-touch-icon" sizes="144x144" href="/working-build/favicon/apple-touch-icon-144x144.png" />
+	<link rel="apple-touch-icon" sizes="60x60" href="/working-build/favicon/apple-touch-icon-60x60.png" />
+	<link rel="apple-touch-icon" sizes="120x120" href="/working-build/favicon/apple-touch-icon-120x120.png" />
+	<link rel="apple-touch-icon" sizes="76x76" href="/working-build/favicon/apple-touch-icon-76x76.png" />
+	<link rel="apple-touch-icon" sizes="152x152" href="/working-build/favicon/apple-touch-icon-152x152.png" />
+	<link rel="icon" type="image/png" href="/working-build/favicon/favicon-196x196.png" sizes="196x196" />
+	<link rel="icon" type="image/png" href="/working-build/favicon/favicon-160x160.png" sizes="160x160" />
+	<link rel="icon" type="image/png" href="/working-build/favicon/favicon-96x96.png" sizes="96x96" />
+	<link rel="icon" type="image/png" href="/working-build/favicon/favicon-32x32.png" sizes="32x32" />
+	<link rel="icon" type="image/png" href="/working-build/favicon/favicon-16x16.png" sizes="16x16" />
+	<meta name="msapplication-TileColor" content="#F3A91E" />
+	<meta name="msapplication-TileImage" content="/working-build/favicon/mstile-144x144.png" />
 
-	<!-- Bootstrap core CSS -->
+	<!-- Bootstrap Core CSS -->
 	<link href="/working-build/dist/css/bootstrap.min.css" rel="stylesheet">
-
-	<!-- Custom styles for this page -->
+	<!-- Page Specific Stylesheet -->
 	<link href="/working-build/styles/what_is_pathway.css" rel="stylesheet">
 </head>
-
 <body>
 <!-- Header Start -->
  <div class="navbar navbar-inverse signIn pathway-header" role="signIn">
@@ -63,7 +62,8 @@
   </ul>
 </div>
 </div>
-<!-- Navbar Start -->
+
+<!-- Pathway Section Navbar Start -->
 <div class="navbar navbar-inverse site-navigation" role="navigation">
   <div id="main_nav" class="container">
     <div class="navbar-header">
@@ -80,7 +80,9 @@
     </nav>
   </div>
 </div>
+<!-- Pathway Section Navbar Start -->
 <!-- Header End --> 
+
 
 
 <!-- Breadcrumb start -->
@@ -185,11 +187,7 @@
     <div class="footer-links navbar">
       <ul class="nav navbar-nav">
         <li class="social-container"> 
-          <a class="social-icon" href="https://www.facebook.com/BYUIdahoPathway"><img src="/working-build/img/social-icons/facebook.png" width="27" height="27"></a> 
-          <a class="social-icon" href="http://www.pinterest.com/byuipop/pathway-online-programs/"><img src="/working-build/img/social-icons/pinterest.png" width="27" height="27"></a>
-          <br class="hidden-xs"> 
-          <a class="social-icon" href="https://twitter.com/BYUIdahoPathway"><img src="/working-build/img/social-icons/twitter.png" width="27" height="27"></a> 
-          <a class="social-icon" href="http://instagram.com/Pathway_BYUIdaho"><img src="/working-build/img/social-icons/instagram.png" width="27" height="27"></a>
+          <a class="social-icon" href="https://www.facebook.com/BYUIdahoPathway"><img src="/working-build/img/social-icons/facebook.png" width="27" height="27"></a><a class="social-icon" href="http://www.pinterest.com/byuipop/pathway-online-programs/"><img src="/working-build/img/social-icons/pinterest.png" width="27" height="27"></a><br class="hidden-xs"> <a class="social-icon" href="https://twitter.com/BYUIdahoPathway"><img src="/working-build/img/social-icons/twitter.png" width="27" height="27"></a> <a class="social-icon" href="http://instagram.com/Pathway_BYUIdaho"><img src="/working-build/img/social-icons/instagram.png" width="27" height="27"></a>
         </li>
         <li class="footer-link hidden-xs"> <a href="http://www.byui.edu/pathway/news-index">Newsroom</a> </li>
         <li class="footer-link hidden-xs"> <a href="/working-build/pages/about-us.html">About Us</a> </li>
@@ -201,14 +199,11 @@
       <a href="http://www.byui.edu" class="byui-logo hidden-xs"></a> </div>
   </div>
 </footer>
-
-<!-- Jquery and Bootstrap JS -->
+<!-- jQuery, Bootstrap, and Misc Scripts -->
 <script src="//code.jquery.com/jquery-1.10.2.min.js"></script> 
 <script src="/working-build/dist/js/bootstrap.min.js"></script>
 
-
 <script src="/working-build/js/drawer.js"></script> 
-
 
 
 
